commit translated contents

--- a/docs/docs-ref-autogen/excel_release/excel.fivequartersset.yml
+++ b/docs/docs-ref-autogen/excel_release/excel.fivequartersset.yml
@@ -1,25 +1,25 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 6d54fd12b9d00bfec865d5546b478b23e010f875
+ms.openlocfilehash: a1e350d7b60f03df6ab1b07f034691ab8e4a28aa
 ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
 ms.translationtype: MT
 ms.contentlocale: zh-CN
 ms.lasthandoff: 02/20/2019
-ms.locfileid: "30104980"
+ms.locfileid: "30110464"
 items:
-- uid: excel.Excel.FiveQuartersSet
+- uid: excel_release.Excel.FiveQuartersSet
   name: Excel.FiveQuartersSet
   fullName: Excel.FiveQuartersSet
   langs:
   - typeScript
   type: interface
-  package: excel
+  package: excel_release
   children:
-  - excel.Excel.FiveQuartersSet.blackCircle
-  - excel.Excel.FiveQuartersSet.circleWithOneWhiteQuarter
-  - excel.Excel.FiveQuartersSet.circleWithThreeWhiteQuarters
-  - excel.Excel.FiveQuartersSet.circleWithTwoWhiteQuarters
-  - excel.Excel.FiveQuartersSet.whiteCircleAllWhiteQuarters
-- uid: excel.Excel.FiveQuartersSet.blackCircle
+  - excel_release.Excel.FiveQuartersSet.blackCircle
+  - excel_release.Excel.FiveQuartersSet.circleWithOneWhiteQuarter
+  - excel_release.Excel.FiveQuartersSet.circleWithThreeWhiteQuarters
+  - excel_release.Excel.FiveQuartersSet.circleWithTwoWhiteQuarters
+  - excel_release.Excel.FiveQuartersSet.whiteCircleAllWhiteQuarters
+- uid: excel_release.Excel.FiveQuartersSet.blackCircle
   name: blackCircle
   fullName: blackCircle
   langs:
@@ -30,7 +30,7 @@ items:
     return:
       type:
       - Icon
-- uid: excel.Excel.FiveQuartersSet.circleWithOneWhiteQuarter
+- uid: excel_release.Excel.FiveQuartersSet.circleWithOneWhiteQuarter
   name: circleWithOneWhiteQuarter
   fullName: circleWithOneWhiteQuarter
   langs:
@@ -41,7 +41,7 @@ items:
     return:
       type:
       - Icon
-- uid: excel.Excel.FiveQuartersSet.circleWithThreeWhiteQuarters
+- uid: excel_release.Excel.FiveQuartersSet.circleWithThreeWhiteQuarters
   name: circleWithThreeWhiteQuarters
   fullName: circleWithThreeWhiteQuarters
   langs:
@@ -52,7 +52,7 @@ items:
     return:
       type:
       - Icon
-- uid: excel.Excel.FiveQuartersSet.circleWithTwoWhiteQuarters
+- uid: excel_release.Excel.FiveQuartersSet.circleWithTwoWhiteQuarters
   name: circleWithTwoWhiteQuarters
   fullName: circleWithTwoWhiteQuarters
   langs:
@@ -63,7 +63,7 @@ items:
     return:
       type:
       - Icon
-- uid: excel.Excel.FiveQuartersSet.whiteCircleAllWhiteQuarters
+- uid: excel_release.Excel.FiveQuartersSet.whiteCircleAllWhiteQuarters
   name: whiteCircleAllWhiteQuarters
   fullName: whiteCircleAllWhiteQuarters
   langs:
