--- a/docs/docs-ref-autogen/outlook_1_7/office.body.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/office.body.yml
@@ -1,14 +1,14 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: ba6db40940753b9f9f56ad71720df2077ef1a11c
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 4c448a5030ee50d1b3ed16abeb46da1fac1550e0
+ms.sourcegitcommit: 6c48441b8be51d3a9d7dc836e386230a155feceb
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30093957"
+ms.lasthandoff: 02/22/2019
+ms.locfileid: "30198289"
 items:
 - uid: Outlook_1_7.Office.Body
   summary: >-
-    body 对象提供为邮件或约会添加和更新内容的方法。它在所选项的 body 属性中返回。
+    body 对象提供用于添加和更新邮件或约会的内容的方法。 它在选定项的 body 属性中返回。
 
 
     \[[API 集: 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -22,19 +22,14 @@ items:
   children:
   - Outlook_1_7.Office.Body.getAsync
   - Outlook_1_7.Office.Body.getAsync_1
-  - Outlook_1_7.Office.Body.getAsync_2
   - Outlook_1_7.Office.Body.getTypeAsync
   - Outlook_1_7.Office.Body.getTypeAsync_1
-  - Outlook_1_7.Office.Body.getTypeAsync_2
   - Outlook_1_7.Office.Body.prependAsync
   - Outlook_1_7.Office.Body.prependAsync_1
-  - Outlook_1_7.Office.Body.prependAsync_2
   - Outlook_1_7.Office.Body.setAsync
   - Outlook_1_7.Office.Body.setAsync_1
-  - Outlook_1_7.Office.Body.setAsync_2
   - Outlook_1_7.Office.Body.setSelectedDataAsync
   - Outlook_1_7.Office.Body.setSelectedDataAsync_1
-  - Outlook_1_7.Office.Body.setSelectedDataAsync_2
 - uid: Outlook_1_7.Office.Body.getAsync
   summary: >-
     使用指定的格式返回当前正文。
@@ -79,7 +74,7 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'getAsync(coercionType: Office.CoercionType, options?: Office.AsyncContextOptions, callback?: (result: Office.AsyncResult<string>) => void): void;'
+    content: 'getAsync(coercionType: Office.CoercionType, options?: Office.AsyncContextOptions, callback?: (asyncResult: Office.AsyncResult<string>) => void): void;'
     return:
       type:
       - void
@@ -94,9 +89,9 @@ items:
       type:
       - Office.AsyncContextOptions
     - id: callback
-      description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 正文以 asyncResult.value 属性中请求的格式提供。
+      description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 在 asyncResult 属性中, 正文以请求的格式提供。
       type:
-      - '(result: Office.AsyncResult<string>) => void'
+      - '(asyncResult: Office.AsyncResult<string>) => void'
 - uid: Outlook_1_7.Office.Body.getAsync_1
   summary: >-
     使用指定的格式返回当前正文。
@@ -116,7 +111,7 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'getAsync(coercionType: Office.CoercionType, callback: (result: Office.AsyncResult<string>) => void): void;'
+    content: 'getAsync(coercionType: Office.CoercionType, callback?: (asyncResult: Office.AsyncResult<string>) => void): void;'
     return:
       type:
       - void
@@ -127,38 +122,9 @@ items:
       type:
       - Office.CoercionType
     - id: callback
-      description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 正文以 asyncResult.value 属性中请求的格式提供。
+      description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 在 asyncResult 属性中, 正文以请求的格式提供。
       type:
-      - '(result: Office.AsyncResult<string>) => void'
-- uid: Outlook_1_7.Office.Body.getAsync_2
-  summary: >-
-    使用指定的格式返回当前正文。
-
-
-    此方法以 coercionType 指定的格式返回整个当前正文。
-
-
-    使用 HTML 格式的正文时, 请务必注意 getAsync 和 setAsync 方法不是幂等。 从 getAsync 方法返回的值并不一定与之前在 setAsync 方法中传递的值完全相同。 客户端可以修改传递给 setAsync 的值, 以使其能够通过其呈现引擎高效呈现。
-
-
-    \[[API 集: 邮箱 1.3](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-  remarks: <table> <tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr> <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写或阅读</td></tr> </table>
-  name: getAsync(coercionType)
-  fullName: getAsync(coercionType)
-  langs:
-  - typeScript
-  type: method
-  syntax:
-    content: 'getAsync(coercionType: Office.CoercionType): void;'
-    return:
-      type:
-      - void
-      description: ''
-    parameters:
-    - id: coercionType
-      description: 用于返回的正文的格式。
-      type:
-      - Office.CoercionType
+      - '(asyncResult: Office.AsyncResult<string>) => void'
 - uid: Outlook_1_7.Office.Body.getTypeAsync
   summary: >-
     获取一个值，该值指示内容采用 HTML 格式还是文本格式。
@@ -172,7 +138,7 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'getTypeAsync(options?: Office.AsyncContextOptions, callback?: (result: Office.AsyncResult<Office.CoercionType>) => void): void;'
+    content: 'getTypeAsync(options?: Office.AsyncContextOptions, callback?: (asyncResult: Office.AsyncResult<Office.CoercionType>) => void): void;'
     return:
       type:
       - void
@@ -183,9 +149,9 @@ items:
       type:
       - Office.AsyncContextOptions
     - id: callback
-      description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 内容类型作为 asyncResult.value 属性中的一个 CoercionType 值返回。
+      description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 内容类型作为 CoercionType 属性中的一个值返回。
       type:
-      - '(result: Office.AsyncResult<Office.CoercionType>) => void'
+      - '(asyncResult: Office.AsyncResult<Office.CoercionType>) => void'
 - uid: Outlook_1_7.Office.Body.getTypeAsync_1
   summary: >-
     获取一个值，该值指示内容采用 HTML 格式还是文本格式。
@@ -215,34 +181,16 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'getTypeAsync(callback?: (result: Office.AsyncResult<Office.CoercionType>) => void): void;'
+    content: 'getTypeAsync(callback?: (asyncResult: Office.AsyncResult<Office.CoercionType>) => void): void;'
     return:
       type:
       - void
       description: ''
     parameters:
     - id: callback
-      description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 内容类型作为 asyncResult.value 属性中的一个 CoercionType 值返回。
+      description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 内容类型作为 CoercionType 属性中的一个值返回。
       type:
-      - '(result: Office.AsyncResult<Office.CoercionType>) => void'
-- uid: Outlook_1_7.Office.Body.getTypeAsync_2
-  summary: >-
-    获取一个值，该值指示内容采用 HTML 格式还是文本格式。
-
-
-    \[[API 集: 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-  remarks: <table> <tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr> <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写</td></tr> </table>
-  name: getTypeAsync()
-  fullName: getTypeAsync()
-  langs:
-  - typeScript
-  type: method
-  syntax:
-    content: 'getTypeAsync(): void;'
-    return:
-      type:
-      - void
-      description: ''
+      - '(asyncResult: Office.AsyncResult<Office.CoercionType>) => void'
 - uid: Outlook_1_7.Office.Body.prependAsync
   summary: >-
     将指定内容添加到项目正文开头。
@@ -278,14 +226,14 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'prependAsync(data: string, options?: Office.AsyncContextOptions & CoercionTypeOptions, callback?: (result: Office.AsyncResult<void>) => void): void;'
+    content: 'prependAsync(data: string, options?: Office.AsyncContextOptions & CoercionTypeOptions, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
     return:
       type:
       - void
       description: ''
     parameters:
     - id: data
-      description: 将插入到正文开头的字符串。字符串大小限制为 1,000,000 个字符。
+      description: 将插入到正文开头的字符串。 字符串大小限制为 1,000,000 个字符。
       type:
       - string
     - id: options
@@ -295,7 +243,7 @@ items:
     - id: callback
       description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 遇到的任何错误都将在 asyncResult 属性中提供。
       type:
-      - '(result: Office.AsyncResult<void>) => void'
+      - '(asyncResult: Office.AsyncResult<void>) => void'
 - uid: Outlook_1_7.Office.Body.prependAsync_1
   summary: >-
     将指定内容添加到项目正文开头。
@@ -315,49 +263,20 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'prependAsync(data: string, callback: (result: Office.AsyncResult<void>) => void): void;'
+    content: 'prependAsync(data: string, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
     return:
       type:
       - void
       description: ''
     parameters:
     - id: data
-      description: 将插入到正文开头的字符串。字符串大小限制为 1,000,000 个字符。
+      description: 将插入到正文开头的字符串。 字符串大小限制为 1,000,000 个字符。
       type:
       - string
     - id: callback
       description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 遇到的任何错误都将在 asyncResult 属性中提供。
       type:
-      - '(result: Office.AsyncResult<void>) => void'
-- uid: Outlook_1_7.Office.Body.prependAsync_2
-  summary: >-
-    将指定内容添加到项目正文开头。
-
-
-    prependAsync 方法在项正文的开头插入指定的字符串。 插入后, 光标将返回相对于插入内容的原始位置。
-
-
-    在 HTML 标记中包含链接时, 可以通过将定位点<!-- -->&lt;<!-- -->(a<!-- -->&gt;<!-- -->) 上的 id 属性设置为 "LPNoLP" 来禁用联机链接预览 (请参阅示例部分)。
-
-
-    \[[API 集: 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-  remarks: <table> <tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadWriteItem</td></tr> <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写</td></tr> <tr><td>错误</td><td>DataExceedsMaximumSize-data 参数的长度超过1000000个字符。</td></tr> </table>
-  name: prependAsync(data)
-  fullName: prependAsync(data)
-  langs:
-  - typeScript
-  type: method
-  syntax:
-    content: 'prependAsync(data: string): void;'
-    return:
-      type:
-      - void
-      description: ''
-    parameters:
-    - id: data
-      description: 将插入到正文开头的字符串。字符串大小限制为 1,000,000 个字符。
-      type:
-      - string
+      - '(asyncResult: Office.AsyncResult<void>) => void'
 - uid: Outlook_1_7.Office.Body.setAsync
   summary: >-
     将整个正文替换为指定的文本。
@@ -409,14 +328,14 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'setAsync(data: string, options?: Office.AsyncContextOptions & CoercionTypeOptions, callback?: (result: Office.AsyncResult<void>) => void): void;'
+    content: 'setAsync(data: string, options?: Office.AsyncContextOptions & CoercionTypeOptions, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
     return:
       type:
       - void
       description: ''
     parameters:
     - id: data
-      description: 将替换现有正文的字符串。字符串限制为 1,000,000 个字符。
+      description: 将替换现有正文的字符串。 字符串限制为 1,000,000 个字符。
       type:
       - string
     - id: options
@@ -426,7 +345,7 @@ items:
     - id: callback
       description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 遇到的任何错误都将在 asyncResult 属性中提供。
       type:
-      - '(result: Office.AsyncResult<void>) => void'
+      - '(asyncResult: Office.AsyncResult<void>) => void'
 - uid: Outlook_1_7.Office.Body.setAsync_1
   summary: >-
     将整个正文替换为指定的文本。
@@ -446,55 +365,26 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'setAsync(data: string, callback: (result: Office.AsyncResult<void>) => void): void;'
+    content: 'setAsync(data: string, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
     return:
       type:
       - void
       description: ''
     parameters:
     - id: data
-      description: 将替换现有正文的字符串。字符串限制为 1,000,000 个字符。
+      description: 将替换现有正文的字符串。 字符串限制为 1,000,000 个字符。
       type:
       - string
     - id: callback
       description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 遇到的任何错误都将在 asyncResult 属性中提供。
       type:
-      - '(result: Office.AsyncResult<void>) => void'
-- uid: Outlook_1_7.Office.Body.setAsync_2
-  summary: >-
-    将整个正文替换为指定的文本。
-
-
-    使用 HTML 格式的正文时, 请务必注意 getAsync 和 setAsync 方法不是幂等。 从 getAsync 方法返回的值并不一定与之前在 setAsync 方法中传递的值完全相同。 客户端可以修改传递给 setAsync 的值, 以使其能够通过其呈现引擎高效呈现。
-
-
-    在 HTML 标记中包含链接时, 可以通过将定位点<!-- -->&lt;<!-- -->(a<!-- -->&gt;<!-- -->) 上的 id 属性设置为 "LPNoLP" 来禁用联机链接预览 (请参阅示例部分)。
-
-
-    \[[API 集: 邮箱 1.3](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-  remarks: <table> <tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadWriteItem</td></tr> <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写</td></tr> <tr><td>错误</td><td>DataExceedsMaximumSize-data 参数的长度超过1000000个字符。</td></tr> <tr><td></td><td>InvalidFormatError-coercionType 参数设置为 coercionType, 邮件正文为纯文本格式。</td></tr> </table>
-  name: setAsync(data)
-  fullName: setAsync(data)
-  langs:
-  - typeScript
-  type: method
-  syntax:
-    content: 'setAsync(data: string): void;'
-    return:
-      type:
-      - void
-      description: ''
-    parameters:
-    - id: data
-      description: 将替换现有正文的字符串。字符串限制为 1,000,000 个字符。
-      type:
-      - string
+      - '(asyncResult: Office.AsyncResult<void>) => void'
 - uid: Outlook_1_7.Office.Body.setSelectedDataAsync
   summary: >-
     将正文中的所选内容更换为指定文本。
 
 
-    document.setselecteddataasync 方法将指定的字符串插入到项目正文中的光标位置, 或者, 如果在编辑器中选择了文本, 则会将所选的文本替换为文本。 如果光标从不在项的正文中, 或者如果项的正文在 UI 中失去焦点, 该字符串将插入到正文内容的顶部。 插入后, 光标放置在插入内容的末尾。
+    document.setselecteddataasync 方法将指定的字符串插入到项目正文中的光标位置, 或者, 如果在编辑器中选择了文本, 则会将所选的文本替换为文本。 如果光标从未出现在项目正文中，或者如果该项目的正文不关注 UI，该字符串将插入到正文内容的顶部。 插入后, 光标放置在插入内容的末尾。
 
 
     在 HTML 标记中包含链接时, 可以通过将定位点<!-- -->&lt;<!-- -->(a<!-- -->&gt;<!-- -->) 上的 id 属性设置为 "LPNoLP" 来禁用联机链接预览 (请参阅示例部分)。
@@ -524,14 +414,14 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'setSelectedDataAsync(data: string, options?: Office.AsyncContextOptions & CoercionTypeOptions, callback?: (result: Office.AsyncResult<void>) => void): void;'
+    content: 'setSelectedDataAsync(data: string, options?: Office.AsyncContextOptions & CoercionTypeOptions, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
     return:
       type:
       - void
       description: ''
     parameters:
     - id: data
-      description: 将替换现有正文的字符串。字符串限制为 1,000,000 个字符。
+      description: 将替换现有正文的字符串。 字符串限制为 1,000,000 个字符。
       type:
       - string
     - id: options
@@ -541,13 +431,13 @@ items:
     - id: callback
       description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 遇到的任何错误都将在 asyncResult 属性中提供。
       type:
-      - '(result: Office.AsyncResult<void>) => void'
+      - '(asyncResult: Office.AsyncResult<void>) => void'
 - uid: Outlook_1_7.Office.Body.setSelectedDataAsync_1
   summary: >-
     将正文中的所选内容更换为指定文本。
 
 
-    document.setselecteddataasync 方法将指定的字符串插入到项目正文中的光标位置, 或者, 如果在编辑器中选择了文本, 则会将所选的文本替换为文本。 如果光标从不在项的正文中, 或者如果项的正文在 UI 中失去焦点, 该字符串将插入到正文内容的顶部。 插入后, 光标放置在插入内容的末尾。
+    document.setselecteddataasync 方法将指定的字符串插入到项目正文中的光标位置, 或者, 如果在编辑器中选择了文本, 则会将所选的文本替换为文本。 如果光标从未出现在项目正文中，或者如果该项目的正文不关注 UI，该字符串将插入到正文内容的顶部。 插入后, 光标放置在插入内容的末尾。
 
 
     在 HTML 标记中包含链接时, 可以通过将定位点<!-- -->&lt;<!-- -->(a<!-- -->&gt;<!-- -->) 上的 id 属性设置为 "LPNoLP" 来禁用联机链接预览 (请参阅示例部分)。
@@ -561,46 +451,17 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'setSelectedDataAsync(data: string, callback: (result: Office.AsyncResult<void>) => void): void;'
+    content: 'setSelectedDataAsync(data: string, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
     return:
       type:
       - void
       description: ''
     parameters:
     - id: data
-      description: 将替换现有正文的字符串。字符串限制为 1,000,000 个字符。
+      description: 将替换现有正文的字符串。 字符串限制为 1,000,000 个字符。
       type:
       - string
     - id: callback
       description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 遇到的任何错误都将在 asyncResult 属性中提供。
       type:
-      - '(result: Office.AsyncResult<void>) => void'
-- uid: Outlook_1_7.Office.Body.setSelectedDataAsync_2
-  summary: >-
-    将正文中的所选内容更换为指定文本。
-
-
-    document.setselecteddataasync 方法将指定的字符串插入到项目正文中的光标位置, 或者, 如果在编辑器中选择了文本, 则会将所选的文本替换为文本。 如果光标从不在项的正文中, 或者如果项的正文在 UI 中失去焦点, 该字符串将插入到正文内容的顶部。 插入后, 光标放置在插入内容的末尾。
-
-
-    在 HTML 标记中包含链接时, 可以通过将定位点<!-- -->&lt;<!-- -->(a<!-- -->&gt;<!-- -->) 上的 id 属性设置为 "LPNoLP" 来禁用联机链接预览 (请参阅示例部分)。
-
-
-    \[[API 集: 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-  remarks: <table> <tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadWriteItem</td></tr> <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写</td></tr> <tr><td>错误</td><td>DataExceedsMaximumSize-data 参数的长度超过1000000个字符。</td></tr> <tr><td></td><td>InvalidFormatError-coercionType 参数设置为 coercionType, 邮件正文为纯文本格式。</td></tr> </table>
-  name: setSelectedDataAsync(data)
-  fullName: setSelectedDataAsync(data)
-  langs:
-  - typeScript
-  type: method
-  syntax:
-    content: 'setSelectedDataAsync(data: string): void;'
-    return:
-      type:
-      - void
-      description: ''
-    parameters:
-    - id: data
-      description: 将替换现有正文的字符串。字符串限制为 1,000,000 个字符。
-      type:
-      - string
+      - '(asyncResult: Office.AsyncResult<void>) => void'
