--- a/docs/docs-ref-autogen/outlook/office.roamingsettings.yml
+++ b/docs/docs-ref-autogen/outlook/office.roamingsettings.yml
@@ -1,14 +1,14 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 24ca2c1534ea630c0e79a54467b9cb7371121b62
-ms.sourcegitcommit: b0b614f5315ab2e5c1e0ea51c687498f87684a07
+ms.openlocfilehash: f73704edc6f722a648be1ebf050e8b79246863df
+ms.sourcegitcommit: 6c48441b8be51d3a9d7dc836e386230a155feceb
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/15/2019
-ms.locfileid: "30056037"
+ms.lasthandoff: 02/22/2019
+ms.locfileid: "30198198"
 items:
 - uid: outlook.Office.RoamingSettings
   summary: >-
-    通过使用 RoamingSettings 对象的方法创建的设置将按外接程序和按用户进行保存，即，这些设置仅供创建它们的外接程序使用，并且仅来自保存它们的用户邮箱。
+    使用 RoamingSettings 对象的方法创建的设置将按外接程序和每个用户进行保存。 即，这些设置仅供创建它们的外接程序使用，并且仅来自保存它们的用户邮箱。
 
 
     虽然 Outlook 外接程序 API 仅允许创建它们的外接程序访问这些设置，但这些设置不应被视为安全存储。可以通过 Exchange Web 服务或扩展 MAPI 访问这些设置。它们不应用于存储敏感信息，如用户凭据或安全令牌。
@@ -17,7 +17,7 @@ items:
     设置的名称是一个字符串，而值可以是字符串、数字、布尔值、null 值、对象或数组。
 
 
-    可通过 Office.context 命名空间中的 roamingSettings 属性访问 RoamingSettings 对象。
+    RoamingSettings 对象可通过 RoamingSettings 属性在命名空间中进行访问。
 
 
     **重要说明**: 只有在首次加载加载项时, 才会从持久化存储初始化 RoamingSettings 对象。 对于任务窗格, 这意味着仅在第一次打开任务窗格时才会对其进行初始化。 如果任务窗格导航到另一个页面或重新加载当前页面, 则内存中的对象将重置为其初始值, 即使您的外接程序具有持续的更改也是如此。 在关闭并重新打开任务窗格之前, 保留的更改将不可用。
@@ -55,7 +55,6 @@ items:
   - outlook.Office.RoamingSettings.get
   - outlook.Office.RoamingSettings.remove
   - outlook.Office.RoamingSettings.saveAsync
-  - outlook.Office.RoamingSettings.saveAsync_1
   - outlook.Office.RoamingSettings.set
 - uid: outlook.Office.RoamingSettings.get
   summary: >-
@@ -108,7 +107,7 @@ items:
     保存设置。
 
 
-    外接程序初始化时会加载之前保存的所有设置，因此，在会话的生存期内，您只能通过 set 和 get 方法使用设置属性包的内存副本。如果希望保留该设置以便可在下次使用外接程序时使用这些设置，请使用 saveAsync 方法。
+    加载项以前保存的任何设置都会在初始化时加载, 因此, 在会话的生存期期间, 可以只使用 set 和 get 方法来处理设置属性包的内存副本。 如果希望保留设置以便可在下次使用外接程序时使用这些设置，请使用 saveAsync 方法。
 
 
     \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -119,7 +118,7 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'saveAsync(callback?: (result: Office.AsyncResult<void>) => void): void;'
+    content: 'saveAsync(callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
     return:
       type:
       - void
@@ -128,28 +127,7 @@ items:
     - id: callback
       description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。
       type:
-      - '(result: Office.AsyncResult<void>) => void'
-- uid: outlook.Office.RoamingSettings.saveAsync_1
-  summary: >-
-    保存设置。
-
-
-    外接程序初始化时会加载之前保存的所有设置，因此，在会话的生存期内，您只能通过 set 和 get 方法使用设置属性包的内存副本。如果希望保留该设置以便可在下次使用外接程序时使用这些设置，请使用 saveAsync 方法。
-
-
-    \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-  remarks: <table> <tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>受限</td></tr> <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写或阅读</td></tr> </table>
-  name: saveAsync()
-  fullName: saveAsync()
-  langs:
-  - typeScript
-  type: method
-  syntax:
-    content: 'saveAsync(): void;'
-    return:
-      type:
-      - void
-      description: ''
+      - '(asyncResult: Office.AsyncResult<void>) => void'
 - uid: outlook.Office.RoamingSettings.set
   summary: >-
     设置或创建指定设置。
@@ -161,7 +139,7 @@ items:
     每个加载项的设置最多可使用32KB。
 
 
-    在调用 saveAsync 函数之前，使用 set 函数对设置所做的所有更改将不会保存到服务器。
+    在调用 saveAsync 函数之前, 使用 set 函数对设置所做的任何更改都不会保存到服务器。
 
 
     \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -183,6 +161,6 @@ items:
       type:
       - string
     - id: value
-      description: 指定要存储的值。
+      description: Specifies the value to be stored.
       type:
       - any
