--- a/docs/docs-ref-autogen/outlook_1_1/office.subject.yml
+++ b/docs/docs-ref-autogen/outlook_1_1/office.subject.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 75814658a9a0c34f0e3526fe1844a08c03409bf4
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 80bce3553d80cb6868f56b1c81b0d79a811e2b0e
+ms.sourcegitcommit: 6c48441b8be51d3a9d7dc836e386230a155feceb
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30097219"
+ms.lasthandoff: 02/22/2019
+ms.locfileid: "30198310"
 items:
 - uid: Outlook_1_1.Office.Subject
   summary: >-
@@ -24,13 +24,12 @@ items:
   - Outlook_1_1.Office.Subject.getAsync_1
   - Outlook_1_1.Office.Subject.setAsync
   - Outlook_1_1.Office.Subject.setAsync_1
-  - Outlook_1_1.Office.Subject.setAsync_2
 - uid: Outlook_1_1.Office.Subject.getAsync
   summary: >-
     获取约会或邮件的主题。
 
 
-    getAsync 方法开始对 Exchange 服务器进行异步调用，以获取约会或邮件的主题。
+    getAsync 方法开始对 Exchange 服务器进行异步调用, 以获取约会或邮件的主题。
 
 
     \[[API 集: 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -41,7 +40,7 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'getAsync(options: Office.AsyncContextOptions, callback: (result: Office.AsyncResult<string>) => void): void;'
+    content: 'getAsync(options: Office.AsyncContextOptions, callback: (asyncResult: Office.AsyncResult<string>) => void): void;'
     return:
       type:
       - void
@@ -54,13 +53,13 @@ items:
     - id: callback
       description: 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 结果`value`的属性是项目的主题。
       type:
-      - '(result: Office.AsyncResult<string>) => void'
+      - '(asyncResult: Office.AsyncResult<string>) => void'
 - uid: Outlook_1_1.Office.Subject.getAsync_1
   summary: >-
     获取约会或邮件的主题。
 
 
-    getAsync 方法开始对 Exchange 服务器进行异步调用，以获取约会或邮件的主题。
+    getAsync 方法开始对 Exchange 服务器进行异步调用, 以获取约会或邮件的主题。
 
 
     \[[API 集: 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -86,7 +85,7 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'getAsync(callback: (result: Office.AsyncResult<string>) => void): void;'
+    content: 'getAsync(callback: (asyncResult: Office.AsyncResult<string>) => void): void;'
     return:
       type:
       - void
@@ -95,13 +94,13 @@ items:
     - id: callback
       description: 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 结果`value`的属性是项目的主题。
       type:
-      - '(result: Office.AsyncResult<string>) => void'
+      - '(asyncResult: Office.AsyncResult<string>) => void'
 - uid: Outlook_1_1.Office.Subject.setAsync
   summary: >-
     设置约会或邮件的主题。
 
 
-    setAsync 方法开始对 Exchange 服务器进行异步调用，以设置约会或邮件的主题。设置主题将覆盖当前主题，但会保留所有前缀，如“Fwd:”或“Re:”。
+    setAsync 方法开始对 Exchange 服务器进行异步调用, 以设置约会或邮件的主题。 设置主题将覆盖当前主题，但会保留所有前缀，如“Fwd:”或“Re:”。
 
 
     \[[API 集: 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -112,56 +111,30 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'setAsync(subject: string, options?: Office.AsyncContextOptions, callback?: (result: Office.AsyncResult<void>) => void): void;'
+    content: 'setAsync(subject: string, options?: Office.AsyncContextOptions, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
     return:
       type:
       - void
       description: ''
     parameters:
     - id: subject
-      description: 约会或邮件的主题。字符串长度限制为 255 个字符。
+      description: 约会或邮件的主题。 字符串长度限制为 255 个字符。
       type:
       - string
     - id: options
-      description: '包含一个或多个以下属性的对象文本。 asyncContext: 开发人员可以在回调方法中提供要访问的任何对象。'
+      description: '可选。 包含一个或多个以下属性的对象文本。 asyncContext: 开发人员可以在回调方法中提供要访问的任何对象。'
       type:
       - Office.AsyncContextOptions
     - id: callback
-      description: 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 如果设置主题失败, asyncResult 属性将包含一个错误代码。
+      description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 如果设置主题失败, asyncResult 属性将包含一个错误代码。
       type:
-      - '(result: Office.AsyncResult<void>) => void'
+      - '(asyncResult: Office.AsyncResult<void>) => void'
 - uid: Outlook_1_1.Office.Subject.setAsync_1
   summary: >-
     设置约会或邮件的主题。
 
 
-    setAsync 方法开始对 Exchange 服务器进行异步调用，以设置约会或邮件的主题。设置主题将覆盖当前主题，但会保留所有前缀，如“Fwd:”或“Re:”。
-
-
-    \[[API 集: 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-  remarks: <table> <tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr> <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写</td></tr> <tr><td>错误</td><td>DataExceedsMaximumSize-subject 参数的长度超过255个字符。</td></tr> </table>
-  name: setAsync(data)
-  fullName: setAsync(data)
-  langs:
-  - typeScript
-  type: method
-  syntax:
-    content: 'setAsync(data: string): void;'
-    return:
-      type:
-      - void
-      description: ''
-    parameters:
-    - id: data
-      description: ''
-      type:
-      - string
-- uid: Outlook_1_1.Office.Subject.setAsync_2
-  summary: >-
-    设置约会或邮件的主题。
-
-
-    setAsync 方法开始对 Exchange 服务器进行异步调用，以设置约会或邮件的主题。设置主题将覆盖当前主题，但会保留所有前缀，如“Fwd:”或“Re:”。
+    setAsync 方法开始对 Exchange 服务器进行异步调用, 以设置约会或邮件的主题。 设置主题将覆盖当前主题，但会保留所有前缀，如“Fwd:”或“Re:”。
 
 
     \[[API 集: 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -186,7 +159,7 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'setAsync(data: string, callback: (result: Office.AsyncResult<void>) => void): void;'
+    content: 'setAsync(data: string, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
     return:
       type:
       - void
@@ -197,6 +170,6 @@ items:
       type:
       - string
     - id: callback
-      description: 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 如果设置主题失败, asyncResult 属性将包含一个错误代码。
+      description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 如果设置主题失败, asyncResult 属性将包含一个错误代码。
       type:
-      - '(result: Office.AsyncResult<void>) => void'
+      - '(asyncResult: Office.AsyncResult<void>) => void'
