--- a/docs/docs-ref-autogen/outlook_1_3/office.notificationmessages.yml
+++ b/docs/docs-ref-autogen/outlook_1_3/office.notificationmessages.yml
@@ -1,14 +1,14 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 2c4306c84f04f978415b6c7d43901ee82c996d1b
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 51f59097bf18470a63e95508089063a8171ac206
+ms.sourcegitcommit: 6c48441b8be51d3a9d7dc836e386230a155feceb
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30094300"
+ms.lasthandoff: 02/22/2019
+ms.locfileid: "30199283"
 items:
 - uid: Outlook_1_3.Office.NotificationMessages
   summary: >-
-    NotificationMessages 对象作为项目的 notificationMessages 属性返回。
+    NotificationMessages 对象以项目的 NotificationMessages 属性的形式返回。
 
 
     \[[API 集: 邮箱 1.3](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -22,22 +22,18 @@ items:
   children:
   - Outlook_1_3.Office.NotificationMessages.addAsync
   - Outlook_1_3.Office.NotificationMessages.addAsync_1
-  - Outlook_1_3.Office.NotificationMessages.addAsync_2
   - Outlook_1_3.Office.NotificationMessages.getAllAsync
   - Outlook_1_3.Office.NotificationMessages.getAllAsync_1
-  - Outlook_1_3.Office.NotificationMessages.getAllAsync_2
   - Outlook_1_3.Office.NotificationMessages.removeAsync
   - Outlook_1_3.Office.NotificationMessages.removeAsync_1
-  - Outlook_1_3.Office.NotificationMessages.removeAsync_2
   - Outlook_1_3.Office.NotificationMessages.replaceAsync
   - Outlook_1_3.Office.NotificationMessages.replaceAsync_1
-  - Outlook_1_3.Office.NotificationMessages.replaceAsync_2
 - uid: Outlook_1_3.Office.NotificationMessages.addAsync
   summary: >-
     向项目添加通知。
 
 
-    每封邮件中最多有 5 个通知。设置过多的通知将返回 NumberOfNotificationMessagesExceeded 错误。
+    每封邮件中最多有 5 个通知。 设置更多将返回 NumberOfNotificationMessagesExceeded 错误。
   remarks: <table> <tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr> <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写或阅读</td></tr> </table>
   name: addAsync(key, JSONmessage, options, callback)
   fullName: addAsync(key, JSONmessage, options, callback)
@@ -45,7 +41,7 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'addAsync(key: string, JSONmessage: NotificationMessageDetails, options?: Office.AsyncContextOptions, callback?: (result: Office.AsyncResult<void>) => void): void;'
+    content: 'addAsync(key: string, JSONmessage: NotificationMessageDetails, options?: Office.AsyncContextOptions, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
     return:
       type:
       - void
@@ -56,7 +52,7 @@ items:
       type:
       - string
     - id: JSONmessage
-      description: 一个 JSON 对象, 其中包含要添加到项目中的通知消息。 它包含一个 NotificationMessageDetails 对象。
+      description: 一个包含要添加到项目的通知邮件的 JSON 对象。 它包含一个 NotificationMessageDetails 对象。
       type:
       - NotificationMessageDetails
     - id: options
@@ -70,13 +66,13 @@ items:
 
         \[Api 集: 邮箱1。3\]
       type:
-      - '(result: Office.AsyncResult<void>) => void'
+      - '(asyncResult: Office.AsyncResult<void>) => void'
 - uid: Outlook_1_3.Office.NotificationMessages.addAsync_1
   summary: >-
     向项目添加通知。
 
 
-    每封邮件中最多有 5 个通知。设置过多的通知将返回 NumberOfNotificationMessagesExceeded 错误。
+    每封邮件中最多有 5 个通知。 设置更多将返回 NumberOfNotificationMessagesExceeded 错误。
   remarks: >-
     <table> <tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr> <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写或阅读</td></tr> </table>
 
@@ -105,44 +101,13 @@ items:
     });
 
     ```
-  name: addAsync(key, JSONmessage)
-  fullName: addAsync(key, JSONmessage)
-  langs:
-  - typeScript
-  type: method
-  syntax:
-    content: 'addAsync(key: string, JSONmessage: NotificationMessageDetails): void;'
-    return:
-      type:
-      - void
-      description: ''
-    parameters:
-    - id: key
-      description: 用于引用此通知邮件的开发人员指定的项。开发人员可以在以后用它来修改此邮件。其长度不能超过 32 个字符。
-      type:
-      - string
-    - id: JSONmessage
-      description: >-
-        一个 JSON 对象, 其中包含要添加到项目中的通知消息。 它包含一个 NotificationMessageDetails 对象。
-
-
-        \[Api 集: 邮箱1。3\]
-      type:
-      - NotificationMessageDetails
-- uid: Outlook_1_3.Office.NotificationMessages.addAsync_2
-  summary: >-
-    向项目添加通知。
-
-
-    每封邮件中最多有 5 个通知。设置过多的通知将返回 NumberOfNotificationMessagesExceeded 错误。
-  remarks: <table> <tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr> <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写或阅读</td></tr> </table>
   name: addAsync(key, JSONmessage, callback)
   fullName: addAsync(key, JSONmessage, callback)
   langs:
   - typeScript
   type: method
   syntax:
-    content: 'addAsync(key: string, JSONmessage: NotificationMessageDetails, callback: (result: Office.AsyncResult<void>) => void): void;'
+    content: 'addAsync(key: string, JSONmessage: NotificationMessageDetails, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
     return:
       type:
       - void
@@ -153,7 +118,7 @@ items:
       type:
       - string
     - id: JSONmessage
-      description: 一个 JSON 对象, 其中包含要添加到项目中的通知消息。 它包含一个 NotificationMessageDetails 对象。
+      description: 一个包含要添加到项目的通知邮件的 JSON 对象。 它包含一个 NotificationMessageDetails 对象。
       type:
       - NotificationMessageDetails
     - id: callback
@@ -163,7 +128,7 @@ items:
 
         \[Api 集: 邮箱1。3\]
       type:
-      - '(result: Office.AsyncResult<void>) => void'
+      - '(asyncResult: Office.AsyncResult<void>) => void'
 - uid: Outlook_1_3.Office.NotificationMessages.getAllAsync
   summary: >-
     返回某个项目的所有项和邮件。
@@ -177,7 +142,7 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'getAllAsync(options?: Office.AsyncContextOptions, callback?: (result: Office.AsyncResult<NotificationMessageDetails[]>) => void): void;'
+    content: 'getAllAsync(options?: Office.AsyncContextOptions, callback?: (asyncResult: Office.AsyncResult<NotificationMessageDetails[]>) => void): void;'
     return:
       type:
       - void
@@ -190,7 +155,7 @@ items:
     - id: callback
       description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 结果`value`的属性是 NotificationMessageDetails 对象的数组。
       type:
-      - '(result: Office.AsyncResult<NotificationMessageDetails[]>) => void'
+      - '(asyncResult: Office.AsyncResult<NotificationMessageDetails[]>) => void'
 - uid: Outlook_1_3.Office.NotificationMessages.getAllAsync_1
   summary: >-
     返回某个项目的所有项和邮件。
@@ -225,7 +190,7 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'getAllAsync(callback: (result: Office.AsyncResult<NotificationMessageDetails[]>) => void): void;'
+    content: 'getAllAsync(callback?: (asyncResult: Office.AsyncResult<NotificationMessageDetails[]>) => void): void;'
     return:
       type:
       - void
@@ -234,25 +199,7 @@ items:
     - id: callback
       description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。 结果`value`的属性是 NotificationMessageDetails 对象的数组。
       type:
-      - '(result: Office.AsyncResult<NotificationMessageDetails[]>) => void'
-- uid: Outlook_1_3.Office.NotificationMessages.getAllAsync_2
-  summary: >-
-    返回某个项目的所有项和邮件。
-
-
-    \[[API 集: 邮箱 1.3](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-  remarks: <table> <tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr> <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写或阅读</td></tr> </table>
-  name: getAllAsync()
-  fullName: getAllAsync()
-  langs:
-  - typeScript
-  type: method
-  syntax:
-    content: 'getAllAsync(): void;'
-    return:
-      type:
-      - void
-      description: ''
+      - '(asyncResult: Office.AsyncResult<NotificationMessageDetails[]>) => void'
 - uid: Outlook_1_3.Office.NotificationMessages.removeAsync
   summary: >-
     删除某个项目的通知邮件。
@@ -266,7 +213,7 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'removeAsync(key: string, options?: Office.AsyncContextOptions, callback?: (result: Office.AsyncResult<void>) => void): void;'
+    content: 'removeAsync(key: string, options?: Office.AsyncContextOptions, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
     return:
       type:
       - void
@@ -277,13 +224,13 @@ items:
       type:
       - string
     - id: options
-      description: ''
+      description: '可选。 包含一个或多个以下属性的对象文本。 asyncContext: 开发人员可以在回调方法中提供要访问的任何对象。'
       type:
       - Office.AsyncContextOptions
     - id: callback
       description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。
       type:
-      - '(result: Office.AsyncResult<void>) => void'
+      - '(asyncResult: Office.AsyncResult<void>) => void'
 - uid: Outlook_1_3.Office.NotificationMessages.removeAsync_1
   summary: >-
     删除某个项目的通知邮件。
@@ -303,36 +250,13 @@ items:
     Office.context.mailbox.item.notificationMessages.removeAsync("progress");
 
     ```
-  name: removeAsync(key)
-  fullName: removeAsync(key)
-  langs:
-  - typeScript
-  type: method
-  syntax:
-    content: 'removeAsync(key: string): void;'
-    return:
-      type:
-      - void
-      description: ''
-    parameters:
-    - id: key
-      description: 要删除的通知邮件的项。
-      type:
-      - string
-- uid: Outlook_1_3.Office.NotificationMessages.removeAsync_2
-  summary: >-
-    删除某个项目的通知邮件。
-
-
-    \[[API 集: 邮箱 1.3](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-  remarks: <table> <tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr> <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写或阅读</td></tr> </table>
   name: removeAsync(key, callback)
   fullName: removeAsync(key, callback)
   langs:
   - typeScript
   type: method
   syntax:
-    content: 'removeAsync(key: string, callback: (result: Office.AsyncResult<void>) => void): void;'
+    content: 'removeAsync(key: string, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
     return:
       type:
       - void
@@ -345,13 +269,13 @@ items:
     - id: callback
       description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。
       type:
-      - '(result: Office.AsyncResult<void>) => void'
+      - '(asyncResult: Office.AsyncResult<void>) => void'
 - uid: Outlook_1_3.Office.NotificationMessages.replaceAsync
   summary: >-
     将带有给定项的通知邮件替换为另一封邮件。
 
 
-    如果带有指定项的通知邮件不存在，replaceAsync 将添加通知。
+    如果具有指定键的通知邮件不存在, 则 replaceAsync 将添加通知。
 
 
     \[[API 集: 邮箱 1.3](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -362,18 +286,18 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'replaceAsync(key: string, JSONmessage: NotificationMessageDetails, options?: Office.AsyncContextOptions, callback?: (result: Office.AsyncResult<void>) => void): void;'
+    content: 'replaceAsync(key: string, JSONmessage: NotificationMessageDetails, options?: Office.AsyncContextOptions, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
     return:
       type:
       - void
       description: ''
     parameters:
     - id: key
-      description: 要替换的通知邮件的项。长度不能超过 32 个字符。
+      description: 要替换的通知邮件的项。 长度不能超过 32 个字符。
       type:
       - string
     - id: JSONmessage
-      description: 一个 JSON 对象, 其中包含用于替换现有邮件的新通知消息。 它包含一个 NotificationMessageDetails 对象。
+      description: 一个包含要替换现有邮件的新通知邮件的 JSON 对象。 它包含一个 NotificationMessageDetails 对象。
       type:
       - NotificationMessageDetails
     - id: options
@@ -383,13 +307,13 @@ items:
     - id: callback
       description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。
       type:
-      - '(result: Office.AsyncResult<void>) => void'
+      - '(asyncResult: Office.AsyncResult<void>) => void'
 - uid: Outlook_1_3.Office.NotificationMessages.replaceAsync_1
   summary: >-
     将带有给定项的通知邮件替换为另一封邮件。
 
 
-    如果带有指定项的通知邮件不存在，replaceAsync 将添加通知。
+    如果具有指定键的通知邮件不存在, 则 replaceAsync 将添加通知。
 
 
     \[[API 集: 邮箱 1.3](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -411,57 +335,27 @@ items:
     });
 
     ```
-  name: replaceAsync(key, JSONmessage)
-  fullName: replaceAsync(key, JSONmessage)
-  langs:
-  - typeScript
-  type: method
-  syntax:
-    content: 'replaceAsync(key: string, JSONmessage: NotificationMessageDetails): void;'
-    return:
-      type:
-      - void
-      description: ''
-    parameters:
-    - id: key
-      description: 要替换的通知邮件的项。长度不能超过 32 个字符。
-      type:
-      - string
-    - id: JSONmessage
-      description: 一个 JSON 对象, 其中包含用于替换现有邮件的新通知消息。 它包含一个 NotificationMessageDetails 对象。
-      type:
-      - NotificationMessageDetails
-- uid: Outlook_1_3.Office.NotificationMessages.replaceAsync_2
-  summary: >-
-    将带有给定项的通知邮件替换为另一封邮件。
-
-
-    如果带有指定项的通知邮件不存在，replaceAsync 将添加通知。
-
-
-    \[[API 集: 邮箱 1.3](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-  remarks: <table> <tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr> <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写或阅读</td></tr> </table>
   name: replaceAsync(key, JSONmessage, callback)
   fullName: replaceAsync(key, JSONmessage, callback)
   langs:
   - typeScript
   type: method
   syntax:
-    content: 'replaceAsync(key: string, JSONmessage: NotificationMessageDetails, callback: (result: Office.AsyncResult<void>) => void): void;'
+    content: 'replaceAsync(key: string, JSONmessage: NotificationMessageDetails, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
     return:
       type:
       - void
       description: ''
     parameters:
     - id: key
-      description: 要替换的通知邮件的项。长度不能超过 32 个字符。
+      description: 要替换的通知邮件的项。 长度不能超过 32 个字符。
       type:
       - string
     - id: JSONmessage
-      description: 一个 JSON 对象, 其中包含用于替换现有邮件的新通知消息。 它包含一个 NotificationMessageDetails 对象。
+      description: 一个包含要替换现有邮件的新通知邮件的 JSON 对象。 它包含一个 NotificationMessageDetails 对象。
       type:
       - NotificationMessageDetails
     - id: callback
       description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。
       type:
-      - '(result: Office.AsyncResult<void>) => void'
+      - '(asyncResult: Office.AsyncResult<void>) => void'
