--- a/docs/docs-ref-autogen/outlook_1_4/office.appointmentform.yml
+++ b/docs/docs-ref-autogen/outlook_1_4/office.appointmentform.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 7876069132865c512fb8032d8ac6ae729f50a2b4
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 50e581ea85a37d38068775eb921a78efae2c23a5
+ms.sourcegitcommit: 6c48441b8be51d3a9d7dc836e386230a155feceb
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30098080"
+ms.lasthandoff: 02/22/2019
+ms.locfileid: "30198317"
 items:
 - uid: Outlook_1_4.Office.AppointmentForm
   summary: >-
@@ -53,7 +53,7 @@ items:
     end 属性以协调世界时 (UTC) 日期和时间值表示。 您可以使用 convertToLocalClientTime 方法将 end 属性值转换为客户端的本地日期和时间。
 
 
-    *阅读模式*
+    *读取模式*
 
 
     end 属性返回 Date 对象。
@@ -62,10 +62,10 @@ items:
     *撰写模式*
 
 
-    end 属性返回 Time 对象。
+    end 属性返回一个 Time 对象。
 
 
-    使用 Time.setAsync 方法设置结束时间时，应使用 convertToUtcClientTime 方法将客户端的本地时间转换为服务器的 UTC。
+    使用 setAsync 方法设置结束时间时, 应使用 convertToUtcClientTime 方法将客户端上的本地时间转换为服务器的 UTC。
 
 
     \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -85,7 +85,7 @@ items:
     获取或设置约会的位置。
 
 
-    *阅读模式*
+    *读取模式*
 
 
     location 属性返回一个包含约会位置的字符串。
@@ -94,7 +94,7 @@ items:
     *撰写模式*
 
 
-    location 属性返回一个 Location 对象，该对象提供用于获取和设置约会位置的方法。
+    location 属性返回一个 location 对象, 该对象提供用于获取和设置约会位置的方法。
 
 
     \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -114,10 +114,10 @@ items:
     提供对事件的可选与会者的访问权限。 对象的类型和访问级别取决于当前项目的模式。
 
 
-    *阅读模式*
+    *读取模式*
 
 
-    optionalAttendees 属性返回一个数组，其中包含每个可选与会者的 EmailAddressDetails 对象。
+    optionalAttendees 属性返回一个数组, 该数组包含会议的每个可选与会者的 EmailAddressDetails 对象。
 
 
     *撰写模式*
@@ -143,10 +143,10 @@ items:
     提供对事件的必需与会者的访问权限。 对象的类型和访问级别取决于当前项目的模式。
 
 
-    *阅读模式*
+    *读取模式*
 
 
-    requiredAttendees 属性返回一个数组，其中包含每个必需与会者的 EmailAddressDetails 对象。
+    requiredAttendees 属性返回一个数组, 其中包含会议的每个所需与会者的 EmailAddressDetails 对象。
 
 
     *撰写模式*
@@ -168,6 +168,12 @@ items:
       type:
       - string[] | EmailAddressDetails[]
 - uid: Outlook_1_4.Office.AppointmentForm.resources
+  summary: >-
+    提供对事件的资源的访问权限。 返回一个字符串数组, 其中包含约会所需的资源。
+
+
+    \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+  remarks: <table> <tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr> <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写或阅读</td></tr> </table>
   name: resources
   fullName: resources
   langs:
@@ -186,7 +192,7 @@ items:
     start 属性以协调世界时 (UTC) 日期和时间值表示。 您可以使用 convertToLocalClientTime 方法将值转换为客户端的本地日期和时间。
 
 
-    *阅读模式*
+    *读取模式*
 
 
     start 属性返回 Date 对象。
@@ -195,10 +201,10 @@ items:
     *撰写模式*
 
 
-    start 属性返回 Time 对象。
+    start 属性返回一个 Time 对象。
 
 
-    使用 Time.setAsync 方法设置开始时间时，应使用 convertToUtcClientTime 方法将客户端的本地时间转换为服务器的 UTC。
+    当您使用 setAsync 方法来设置开始时间时, 应使用 convertToUtcClientTime 方法将客户端上的本地时间转换为服务器的 UTC。
 
 
     \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -218,19 +224,19 @@ items:
     获取或设置显示在项目的主题字段中的说明。
 
 
-    subject 属性获取或设置由电子邮件服务器发送项目时的整个主题。
+    subject 属性获取或设置由电子邮件服务器发送的项目的整个主题。
 
 
-    *阅读模式*
+    *读取模式*
 
 
-    subject 属性返回一个字符串。使用 normalizedSubject 属性获取不带任何前导前缀（如 RE: 和 FW:）的主题。
+    subject 属性返回一个字符串。 使用 normalizedSubject 属性可获取主题减去任何前导前缀, 如 RE: 和 FW:。
 
 
     *撰写模式*
 
 
-    subject 属性返回一个 Subject 对象，该对象提供用于获取和设置主题的方法。
+    subject 属性返回一个 subject 对象, 该对象提供用于获取和设置主题的方法。
 
 
     \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
