--- a/docs/docs-ref-autogen/outlook_1_5/office.location.yml
+++ b/docs/docs-ref-autogen/outlook_1_5/office.location.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: f6c362a1e212ebd2daff9f27942542cc1dfeb014
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: d6fe603ea202b9a5e6e9ba1c68daabff96c6b235
+ms.sourcegitcommit: 6c48441b8be51d3a9d7dc836e386230a155feceb
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30098619"
+ms.lasthandoff: 02/22/2019
+ms.locfileid: "30199199"
 items:
 - uid: Outlook_1_5.Office.Location
   summary: >-
@@ -22,16 +22,14 @@ items:
   children:
   - Outlook_1_5.Office.Location.getAsync
   - Outlook_1_5.Office.Location.getAsync_1
-  - Outlook_1_5.Office.Location.getAsync_2
   - Outlook_1_5.Office.Location.setAsync
   - Outlook_1_5.Office.Location.setAsync_1
-  - Outlook_1_5.Office.Location.setAsync_2
 - uid: Outlook_1_5.Office.Location.getAsync
   summary: >-
     获取约会的位置。
 
 
-    getAsync 方法开始对 Exchange 服务器进行异步调用，以获取约会的位置。 约会的位置以 asyncResult.value 属性中的字符串形式提供。
+    getAsync 方法开始对 Exchange 服务器进行异步调用, 以获取约会的位置。 约会的位置作为 asyncResult 属性中的字符串提供。
   remarks: >-
     <table> <tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr> <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写</td></tr> </table>
 
@@ -57,30 +55,30 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'getAsync(options?: Office.AsyncContextOptions, callback?: (result: Office.AsyncResult<string>) => void): void;'
+    content: 'getAsync(options: Office.AsyncContextOptions, callback: (asyncResult: Office.AsyncResult<string>) => void): void;'
     return:
       type:
       - void
       description: ''
     parameters:
     - id: options
-      description: '可选。 包含一个或多个以下属性的对象文本。 asyncContext: 开发人员可以在回调方法中提供要访问的任何对象。'
+      description: '包含一个或多个以下属性的对象文本。 asyncContext: 开发人员可以在回调方法中提供要访问的任何对象。'
       type:
       - Office.AsyncContextOptions
     - id: callback
       description: >-
-        可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。
+        方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。
 
 
         \[Api 集: 邮箱1。1\]
       type:
-      - '(result: Office.AsyncResult<string>) => void'
+      - '(asyncResult: Office.AsyncResult<string>) => void'
 - uid: Outlook_1_5.Office.Location.getAsync_1
   summary: >-
     获取约会的位置。
 
 
-    getAsync 方法开始对 Exchange 服务器进行异步调用，以获取约会的位置。 约会的位置以 asyncResult.value 属性中的字符串形式提供。
+    getAsync 方法开始对 Exchange 服务器进行异步调用, 以获取约会的位置。 约会的位置作为 asyncResult 属性中的字符串提供。
   remarks: <table> <tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr> <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写</td></tr> </table>
   name: getAsync(callback)
   fullName: getAsync(callback)
@@ -88,7 +86,7 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'getAsync(callback: (result: Office.AsyncResult<string>) => void): void;'
+    content: 'getAsync(callback: (asyncResult: Office.AsyncResult<string>) => void): void;'
     return:
       type:
       - void
@@ -96,39 +94,18 @@ items:
     parameters:
     - id: callback
       description: >-
-        可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。
+        方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。
 
 
         \[Api 集: 邮箱1。1\]
       type:
-      - '(result: Office.AsyncResult<string>) => void'
-- uid: Outlook_1_5.Office.Location.getAsync_2
-  summary: >-
-    获取约会的位置。
-
-
-    getAsync 方法开始对 Exchange 服务器进行异步调用，以获取约会的位置。 约会的位置以 asyncResult.value 属性中的字符串形式提供。
-
-
-    \[[API 集: 邮箱 1.1](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-  remarks: <table> <tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr> <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写</td></tr> </table>
-  name: getAsync()
-  fullName: getAsync()
-  langs:
-  - typeScript
-  type: method
-  syntax:
-    content: 'getAsync(): void;'
-    return:
-      type:
-      - void
-      description: ''
+      - '(asyncResult: Office.AsyncResult<string>) => void'
 - uid: Outlook_1_5.Office.Location.setAsync
   summary: >-
     设置约会的位置。
 
 
-    setAsync 方法开始对 Exchange 服务器进行异步调用，以设置约会的位置。设置约会的位置将覆盖当前位置。
+    setAsync 方法开始对 Exchange 服务器进行异步调用, 以设置约会的位置。 设置约会的位置将覆盖当前位置。
   remarks: <table> <tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr> <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写</td></tr> <tr><td>错误</td><td>DataExceedsMaximumSize-location 参数的长度超过255个字符。</td></tr> </table>
   name: setAsync(location, options, callback)
   fullName: setAsync(location, options, callback)
@@ -136,14 +113,14 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'setAsync(location: string, options?: Office.AsyncContextOptions, callback?: (result: Office.AsyncResult<void>) => void): void;'
+    content: 'setAsync(location: string, options?: Office.AsyncContextOptions, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
     return:
       type:
       - void
       description: ''
     parameters:
     - id: location
-      description: 约会的位置。字符串大小限制为 255 个字符。
+      description: 约会的位置。 字符串大小限制为 255 个字符。
       type:
       - string
     - id: options
@@ -157,40 +134,13 @@ items:
 
         \[Api 集: 邮箱1。1\]
       type:
-      - '(result: Office.AsyncResult<void>) => void'
+      - '(asyncResult: Office.AsyncResult<void>) => void'
 - uid: Outlook_1_5.Office.Location.setAsync_1
   summary: >-
     设置约会的位置。
 
 
-    setAsync 方法开始对 Exchange 服务器进行异步调用，以设置约会的位置。设置约会的位置将覆盖当前位置。
-  remarks: <table> <tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr> <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写</td></tr> <tr><td>错误</td><td>DataExceedsMaximumSize-location 参数的长度超过255个字符。</td></tr> </table>
-  name: setAsync(location)
-  fullName: setAsync(location)
-  langs:
-  - typeScript
-  type: method
-  syntax:
-    content: 'setAsync(location: string): void;'
-    return:
-      type:
-      - void
-      description: ''
-    parameters:
-    - id: location
-      description: >-
-        约会的位置。字符串大小限制为 255 个字符。
-
-
-        \[Api 集: 邮箱1。1\]
-      type:
-      - string
-- uid: Outlook_1_5.Office.Location.setAsync_2
-  summary: >-
-    设置约会的位置。
-
-
-    setAsync 方法开始对 Exchange 服务器进行异步调用，以设置约会的位置。设置约会的位置将覆盖当前位置。
+    setAsync 方法开始对 Exchange 服务器进行异步调用, 以设置约会的位置。 设置约会的位置将覆盖当前位置。
   remarks: >-
     <table> <tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr> <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写</td></tr> <tr><td>错误</td><td>DataExceedsMaximumSize-location 参数的长度超过255个字符。</td></tr> </table>
 
@@ -215,14 +165,14 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'setAsync(location: string, callback: (result: Office.AsyncResult<void>) => void): void;'
+    content: 'setAsync(location: string, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
     return:
       type:
       - void
       description: ''
     parameters:
     - id: location
-      description: 约会的位置。字符串大小限制为 255 个字符。
+      description: 约会的位置。 字符串大小限制为 255 个字符。
       type:
       - string
     - id: callback
@@ -232,4 +182,4 @@ items:
 
         \[Api 集: 邮箱1。1\]
       type:
-      - '(result: Office.AsyncResult<void>) => void'
+      - '(asyncResult: Office.AsyncResult<void>) => void'
