--- a/docs/docs-ref-autogen/outlook_1_7/office.customproperties.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/office.customproperties.yml
@@ -1,14 +1,14 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: b93895cdc1203cfe386d915446b5b4a6704c6490
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: a4d0353584e1521748ad23516d901574b75be2c4
+ms.sourcegitcommit: 6c48441b8be51d3a9d7dc836e386230a155feceb
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30096071"
+ms.lasthandoff: 02/22/2019
+ms.locfileid: "30199290"
 items:
 - uid: Outlook_1_7.Office.CustomProperties
   summary: >-
-    CustomProperties 对象表示特定于特定项目和特定于 Outlook 邮件外接程序的自定义属性。例如，邮件外接程序可能有必要保存一些特定于激活应用程序的当前电子邮件的数据。如果用户以后再次访问相同的消息，并再次激活邮件外接程序，应用程序将能够检索作为自定义属性保存的数据。
+    CustomProperties 对象表示特定于特定项目的自定义属性, 以及特定于 Outlook 邮件外接程序的自定义属性。 例如，邮件外接程序可能有必要保存一些特定于激活外接程序的当前电子邮件的数据。 如果用户以后再次访问相同的邮件，并再次激活邮件外接程序，外接程序将能够检索作为自定义属性保存的数据。
 
 
     由于 Outlook for Mac 不缓存自定义属性, 因此如果用户的网络出现故障, 邮件外接程序将无法访问其自定义属性。
@@ -26,8 +26,6 @@ items:
   - Outlook_1_7.Office.CustomProperties.get
   - Outlook_1_7.Office.CustomProperties.remove
   - Outlook_1_7.Office.CustomProperties.saveAsync
-  - Outlook_1_7.Office.CustomProperties.saveAsync_1
-  - Outlook_1_7.Office.CustomProperties.saveAsync_2
   - Outlook_1_7.Office.CustomProperties.set
 - uid: Outlook_1_7.Office.CustomProperties.get
   summary: 返回指定自定义属性的值。
@@ -57,7 +55,7 @@ items:
     从自定义属性集合中移除指定的属性。
 
 
-    若要永久移除属性，必须调用 CustomProperties 对象的 saveAsync 方法。
+    若要永久移除属性, 必须调用 CustomProperties 对象的 saveAsync 方法。
   remarks: <table> <tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr> <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写或阅读</td></tr> </table>
   name: remove(name)
   fullName: remove(name)
@@ -84,41 +82,7 @@ items:
     将特定于项目的自定义属性保存到服务器。
 
 
-    您必须调用 saveAsync 方法来保留使用 CustomProperties 对象的 set 方法或 remove 方法所做的任何更改。保存操作是异步操作。
-
-
-    最好让回调函数检查并处理 saveAsync 中的错误。 尤其要注意的是，当用户在阅读窗体中处于连接状态时，可以激活阅读外接程序，随后用户将断开连接。 如果外接程序在处于断开连接状态时调用 saveAsync, saveAsync 将返回错误。 你的回调方法应该会相应地处理此错误。
-  remarks: <table> <tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr> <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写或阅读</td></tr> </table>
-  name: saveAsync(callback, asyncContext)
-  fullName: saveAsync(callback, asyncContext)
-  langs:
-  - typeScript
-  type: method
-  syntax:
-    content: 'saveAsync(callback?: (result: Office.AsyncResult<void>) => void, asyncContext?: any): void;'
-    return:
-      type:
-      - void
-      description: ''
-    parameters:
-    - id: callback
-      description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。
-      type:
-      - '(result: Office.AsyncResult<void>) => void'
-    - id: asyncContext
-      description: >-
-        可选。 传递给回调方法的任何状态数据。
-
-
-        \[Api 集: 邮箱1。0\]
-      type:
-      - any
-- uid: Outlook_1_7.Office.CustomProperties.saveAsync_1
-  summary: >-
-    将特定于项目的自定义属性保存到服务器。
-
-
-    您必须调用 saveAsync 方法来保留使用 CustomProperties 对象的 set 方法或 remove 方法所做的任何更改。保存操作是异步操作。
+    必须调用 saveAsync 方法, 以保留通过 set 方法或 CustomProperties 对象的 remove 方法所做的任何更改。 保存操作是异步操作。
 
 
     最好让回调函数检查并处理 saveAsync 中的错误。 尤其要注意的是，当用户在阅读窗体中处于连接状态时，可以激活阅读外接程序，随后用户将断开连接。 如果外接程序在处于断开连接状态时调用 saveAsync, saveAsync 将返回错误。 你的回调方法应该会相应地处理此错误。
@@ -184,59 +148,39 @@ items:
     }
 
     ```
-  name: saveAsync(callback)
-  fullName: saveAsync(callback)
+  name: saveAsync(callback, asyncContext)
+  fullName: saveAsync(callback, asyncContext)
   langs:
   - typeScript
   type: method
   syntax:
-    content: 'saveAsync(callback?: (result: Office.AsyncResult<void>) => void): void;'
+    content: 'saveAsync(callback?: (asyncResult: Office.AsyncResult<void>) => void, asyncContext?: any): void;'
     return:
       type:
       - void
       description: ''
     parameters:
     - id: callback
+      description: 可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。
+      type:
+      - '(asyncResult: Office.AsyncResult<void>) => void'
+    - id: asyncContext
       description: >-
-        可选。 方法完成后, 将使用类型为 AsyncResult 的单个参数调用在 callback 参数中传递的函数。
+        可选。 传递给回调方法的任何状态数据。
 
 
         \[Api 集: 邮箱1。0\]
       type:
-      - '(result: Office.AsyncResult<void>) => void'
-- uid: Outlook_1_7.Office.CustomProperties.saveAsync_2
-  summary: >-
-    将特定于项目的自定义属性保存到服务器。
-
-
-    您必须调用 saveAsync 方法来保留使用 CustomProperties 对象的 set 方法或 remove 方法所做的任何更改。保存操作是异步操作。
-
-
-    最好让回调函数检查并处理 saveAsync 中的错误。 尤其要注意的是，当用户在阅读窗体中处于连接状态时，可以激活阅读外接程序，随后用户将断开连接。 如果外接程序在处于断开连接状态时调用 saveAsync, saveAsync 将返回错误。 你的回调方法应该会相应地处理此错误。
-
-
-    \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-  remarks: <table> <tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr> <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写或阅读</td></tr> </table>
-  name: saveAsync()
-  fullName: saveAsync()
-  langs:
-  - typeScript
-  type: method
-  syntax:
-    content: 'saveAsync(): void;'
-    return:
-      type:
-      - void
-      description: ''
+      - any
 - uid: Outlook_1_7.Office.CustomProperties.set
   summary: >-
     将指定属性设置为指定值。
 
 
-    set 方法将指定属性设置为指定值。必须使用 saveAsync 方法将该属性保存到服务器中。
+    set 方法将指定的属性设置为指定的值。 必须使用 saveAsync 方法将属性保存到服务器。
 
 
-    如果尚不存在指定属性，set 方法将创建一个新的属性；否则现有值将替换为新值。value 参数可以是任何类型；但是始终作为字符串传递给服务器。
+    如果指定的属性尚不存在, 则 set 方法将创建一个新属性;否则, 现有值将被替换为新值。 value 参数可以是任何类型;但是, 它始终作为字符串传递给服务器。
 
 
     \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
