--- a/docs/docs-ref-autogen/outlook_1_7/office.itemread.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/office.itemread.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: b43c218cba5a3f3181c2f096e7220271cf5c7d62
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: adcd512f482f8397197ae5aedb9eb8dc3f0b8572
+ms.sourcegitcommit: 6c48441b8be51d3a9d7dc836e386230a155feceb
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30098066"
+ms.lasthandoff: 02/22/2019
+ms.locfileid: "30198387"
 items:
 - uid: Outlook_1_7.Office.ItemRead
   summary: >-
@@ -22,9 +22,7 @@ items:
   package: Outlook_1_7
   children:
   - Outlook_1_7.Office.ItemRead.displayReplyAllForm
-  - Outlook_1_7.Office.ItemRead.displayReplyAllForm_1
   - Outlook_1_7.Office.ItemRead.displayReplyForm
-  - Outlook_1_7.Office.ItemRead.displayReplyForm_1
   - Outlook_1_7.Office.ItemRead.getEntities
   - Outlook_1_7.Office.ItemRead.getEntitiesByType
   - Outlook_1_7.Office.ItemRead.getFilteredEntitiesByName
@@ -45,10 +43,10 @@ items:
     在 Outlook Web App 中，答复窗体显示为包含 3 列视图的弹出式窗体以及包含 2 列或 1 列视图的弹出式窗体。
 
 
-    如果任意字符串参数超出其限制，displayReplyAllForm 将引发异常。
+    如果任何字符串参数超出其限制, displayReplyAllForm 将引发异常。
 
 
-    当在 formData.attachments 参数中指定附件时，Outlook 和 Outlook Web App 尝试下载所有附件并将其附加到答复窗体。如果无法添加任何附件，则在窗体 UI 中显示错误。如果这不可能，则不引发错误消息。
+    当附件在 formData 参数中指定时, outlook 和 outlook Web App 尝试下载所有附件并将其附加到答复窗体。 如果无法添加任何附件，则在窗体 UI 中显示错误。 如果这不可能，则不引发错误消息。
 
 
     **注意**: outlook for iOS 或 outlook for Android 中不支持此方法。
@@ -62,7 +60,7 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'displayReplyAllForm(formData: string | ReplyFormData, callback?: (result: Office.AsyncResult<void>) => void): void;'
+    content: 'displayReplyAllForm(formData: string | ReplyFormData, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
     return:
       type:
       - void
@@ -75,42 +73,7 @@ items:
     - id: callback
       description: 可选。 方法完成后, 使用单个参数 asyncResult 调用在 callback 参数中传递的函数, 该参数是一个作为一个 asyncresult 对象的参数。
       type:
-      - '(result: Office.AsyncResult<void>) => void'
-- uid: Outlook_1_7.Office.ItemRead.displayReplyAllForm_1
-  summary: >-
-    显示答复窗体，其中包括所选邮件的发件人和所有收件人或所选约会的组织者和所有与会者。
-
-
-    在 Outlook Web App 中，答复窗体显示为包含 3 列视图的弹出式窗体以及包含 2 列或 1 列视图的弹出式窗体。
-
-
-    如果任意字符串参数超出其限制，displayReplyAllForm 将引发异常。
-
-
-    当在 formData.attachments 参数中指定附件时，Outlook 和 Outlook Web App 尝试下载所有附件并将其附加到答复窗体。如果无法添加任何附件，则在窗体 UI 中显示错误。如果这不可能，则不引发错误消息。
-
-
-    **注意**: outlook for iOS 或 outlook for Android 中不支持此方法。
-
-
-    \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-  remarks: <table> <tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr> <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>阅读</td></tr> </table>
-  name: displayReplyAllForm(formData)
-  fullName: displayReplyAllForm(formData)
-  langs:
-  - typeScript
-  type: method
-  syntax:
-    content: 'displayReplyAllForm(formData: string | ReplyFormData): void;'
-    return:
-      type:
-      - void
-      description: ''
-    parameters:
-    - id: formData
-      description: 一个包含文本和 HTML 且表示答复窗体的正文的字符串。 该字符串限制为 32 KB 或一个[ReplyFormData](xref:Outlook_1_7.Office.ReplyFormData)对象, 其中包含正文或附件数据以及回调函数。
-      type:
-      - string | ReplyFormData
+      - '(asyncResult: Office.AsyncResult<void>) => void'
 - uid: Outlook_1_7.Office.ItemRead.displayReplyForm
   summary: >-
     显示答复窗体，其中仅包括所选邮件的发件人或所选约会的组织者。
@@ -119,10 +82,10 @@ items:
     在 Outlook Web App 中，答复窗体显示为包含 3 列视图的弹出式窗体以及包含 2 列或 1 列视图的弹出式窗体。
 
 
-    如果任意字符串参数超出其限制，displayReplyForm 将引发异常。
+    如果任何字符串参数超出其限制, displayReplyForm 将引发异常。
 
 
-    当在 formData.attachments 参数中指定附件时，Outlook 和 Outlook Web App 尝试下载所有附件并将其附加到答复窗体。如果无法添加任何附件，则在窗体 UI 中显示错误。如果这不可能，则不引发错误消息。
+    当附件在 formData 参数中指定时, outlook 和 outlook Web App 尝试下载所有附件并将其附加到答复窗体。 如果无法添加任何附件，则在窗体 UI 中显示错误。 如果这不可能，则不引发错误消息。
 
 
     **注意**: outlook for iOS 或 outlook for Android 中不支持此方法。
@@ -136,7 +99,7 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'displayReplyForm(formData: string | ReplyFormData, callback?: (result: Office.AsyncResult<void>) => void): void;'
+    content: 'displayReplyForm(formData: string | ReplyFormData, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
     return:
       type:
       - void
@@ -149,42 +112,7 @@ items:
     - id: callback
       description: 可选。 方法完成后, 使用单个参数 asyncResult 调用在 callback 参数中传递的函数, 该参数是一个作为一个 asyncresult 对象的参数。
       type:
-      - '(result: Office.AsyncResult<void>) => void'
-- uid: Outlook_1_7.Office.ItemRead.displayReplyForm_1
-  summary: >-
-    显示答复窗体，其中仅包括所选邮件的发件人或所选约会的组织者。
-
-
-    在 Outlook Web App 中，答复窗体显示为包含 3 列视图的弹出式窗体以及包含 2 列或 1 列视图的弹出式窗体。
-
-
-    如果任意字符串参数超出其限制，displayReplyForm 将引发异常。
-
-
-    当在 formData.attachments 参数中指定附件时，Outlook 和 Outlook Web App 尝试下载所有附件并将其附加到答复窗体。如果无法添加任何附件，则在窗体 UI 中显示错误。如果这不可能，则不引发错误消息。
-
-
-    **注意**: outlook for iOS 或 outlook for Android 中不支持此方法。
-
-
-    \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-  remarks: <table> <tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr> <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>阅读</td></tr> </table>
-  name: displayReplyForm(formData)
-  fullName: displayReplyForm(formData)
-  langs:
-  - typeScript
-  type: method
-  syntax:
-    content: 'displayReplyForm(formData: string | ReplyFormData): void;'
-    return:
-      type:
-      - void
-      description: ''
-    parameters:
-    - id: formData
-      description: 一个包含文本和 HTML 且表示答复窗体的正文的字符串。 该字符串限制为 32 KB 或一个[ReplyFormData](xref:Outlook_1_7.Office.ReplyFormData)对象, 其中包含正文或附件数据以及回调函数。
-      type:
-      - string | ReplyFormData
+      - '(asyncResult: Office.AsyncResult<void>) => void'
 - uid: Outlook_1_7.Office.ItemRead.getEntities
   summary: >-
     获取在所选项目的正文中找到的实体。
@@ -222,7 +150,7 @@ items:
     当使用此方法的最低权限级别受限时，某些实体类型需要 ReadItem 才能进行访问，如下表中所指定。
 
 
-    <table> <tr> <th>entityType 的值</th> <th>返回的数组中对象的类型</th> <th>所需权限级别</th> </tr> <tr> <td>Address</td> <td>字符串</td> <td>受限</td> </tr> <tr> <td>联系人</td> <td>联系人</td> <td>ReadItem</td> </tr> <tr> <td>EmailAddress</td> <td>字符串</td> <td>ReadItem</td> </tr> <tr> <td>MeetingSuggestion</td> <td>MeetingSuggestion</td> <td>ReadItem</td> </tr> <tr> <td>PhoneNumber</td> <td>PhoneNumber</td> <td>受限</td> </tr> <tr> <td>TaskSuggestion</td> <td>TaskSuggestion</td> <td>ReadItem</td> </tr> <tr> <td>URL</td> <td>字符串</td> <td>受限</td> </tr> </table>
+    <table> <tr> <th>entityType 的值</th> <th>返回的数组中对象的类型</th> <th>所需权限级别</th> </tr> <tr> <td>地址</td> <td>String</td> <td>受限</td> </tr> <tr> <td>联系人</td> <td>联系人</td> <td>ReadItem</td> </tr> <tr> <td>EmailAddress</td> <td>String</td> <td>ReadItem</td> </tr> <tr> <td>MeetingSuggestion</td> <td>MeetingSuggestion</td> <td>ReadItem</td> </tr> <tr> <td>PhoneNumber</td> <td>PhoneNumber</td> <td>受限</td> </tr> <tr> <td>TaskSuggestion</td> <td>TaskSuggestion</td> <td>ReadItem</td> </tr> <tr> <td>URL</td> <td>String</td> <td>受限</td> </tr> </table>
   name: getEntitiesByType(entityType)
   fullName: getEntitiesByType(entityType)
   langs:
@@ -244,7 +172,7 @@ items:
     返回传递清单 XML 文件中定义的命名筛选器的所选项目中的已知实体。
 
 
-    getFilteredEntitiesByName 方法返回匹配在具有指定 FilterName 元素值的清单 XML 文件中的 ItemHasKnownEntity 规则元素中定义的正则表达式的实体。
+    getFilteredEntitiesByName 方法返回与在清单 XML 文件中的 ItemHasKnownEntity rule 元素中定义的正则表达式匹配的实体, 具有指定的 FilterName 元素值。
 
 
     **注意**: outlook for iOS 或 outlook for Android 中不支持此方法。
@@ -262,10 +190,10 @@ items:
     return:
       type:
       - (string | Contact | MeetingSuggestion | PhoneNumber | TaskSuggestion)[]
-      description: 如果具有匹配 name 参数的 FilterName 元素值的清单中没有任何 ItemHasKnownEntity 元素，则该方法返回 null。如果 name 参数匹配清单中的 ItemHasKnownEntity 元素，但在匹配的当前项目中没有实体，则该方法返回一个空数组。
+      description: 如果清单中没有 ItemHasKnownEntity 元素与 name 参数匹配的 FilterName 元素值, 则该方法返回 null。 如果 name 参数与清单中的 ItemHasKnownEntity 元素匹配, 但当前项目中没有匹配的实体, 则该方法将返回一个空数组。
     parameters:
     - id: name
-      description: 定义筛选器匹配的 ItemHasKnownEntity 规则元素的名称。
+      description: 定义要匹配的筛选器的 ItemHasKnownEntity 规则元素的名称。
       type:
       - string
 - uid: Outlook_1_7.Office.ItemRead.getRegExMatches
@@ -273,10 +201,10 @@ items:
     返回所选项目中匹配在清单 XML 文件中定义的正则表达式的字符串值。
 
 
-    getRegExMatches 方法返回匹配在清单 XML 文件中的每个 ItemHasRegularExpressionMatch 或 ItemHasKnownEntity 规则元素中定义的正则表达式的字符串。对于 ItemHasRegularExpressionMatch 规则，匹配字符串必须发生在该规则指定的项目的属性中。PropertyName 简单类型定义支持的属性。
+    getRegExMatches 方法返回匹配在清单 XML 文件中的每个 ItemHasRegularExpressionMatch 或 ItemHasKnownEntity 规则元素中定义的正则表达式的字符串。 对于 ItemHasRegularExpressionMatch 规则, 匹配的字符串必须出现在由该规则指定的项的属性中。 PropertyName 简单类型定义受支持的属性。
 
 
-    如果在项目的正文属性上指定 ItemHasRegularExpressionMatch 规则，则正则表达式应进一步筛选正文并应尝试返回该项目的整个正文。使用正则表达式（如 .*）获取项目的整个正文并不总是返回预期的结果。而是使用 Body.getAsync 方法检索整个正文。
+    如果您在项目的 body 属性上指定 ItemHasRegularExpressionMatch 规则, 则正则表达式应进一步筛选正文, 并且不应尝试返回项目的整个正文。 使用正则表达式 (如. *) 获取项目的整个正文并不总是返回预期的结果。 而是使用 getAsync 方法检索整个正文。
 
 
     **注意**: outlook for iOS 或 outlook for Android 中不支持此方法。
@@ -294,16 +222,16 @@ items:
     return:
       type:
       - any
-      description: 一个包含匹配在清单 XML 文件中定义的正则表达式的字符串数组的对象。每个数组的名称等于匹配 ItemHasRegularExpressionMatch 规则的 RegExName 属性或匹配 ItemHasKnownEntity 规则的 FilterName 属性的相应值。
+      description: 一个包含匹配在清单 XML 文件中定义的正则表达式的字符串数组的对象。 每个数组的名称等于匹配的 ItemHasRegularExpressionMatch 规则的 RegExName 属性的相应值或匹配 ItemHasKnownEntity 规则的 FilterName 属性的值。
 - uid: Outlook_1_7.Office.ItemRead.getRegExMatchesByName
   summary: >-
     返回匹配在清单 XML 文件中定义的命名正则表达式的所选项目中的字符串值。
 
 
-    getRegExMatchesByName 方法返回匹配在具有指定 RegExName 元素值的清单 XML 文件中的 ItemHasRegularExpressionMatch 规则元素中定义的正则表达式的字符串。
+    getRegExMatchesByName 方法返回与在清单 XML 文件中的 ItemHasRegularExpressionMatch rule 元素中定义的正则表达式匹配的字符串, 该正则表达式具有指定的 RegExName 元素值。
 
 
-    如果在项目的正文属性上指定 ItemHasRegularExpressionMatch 规则，则正则表达式应进一步筛选正文并应尝试返回该项目的整个正文。使用正则表达式（如 .*）获取项目的整个正文并不总是返回预期的结果。
+    如果您在项目的 body 属性上指定 ItemHasRegularExpressionMatch 规则, 则正则表达式应进一步筛选正文, 并且不应尝试返回项目的整个正文。 使用正则表达式 (如. *) 获取项目的整个正文并不总是返回预期的结果。
 
 
     **注意**: outlook for iOS 或 outlook for Android 中不支持此方法。
@@ -324,12 +252,12 @@ items:
       description: 一个包含匹配在清单 XML 文件中定义的正则表达式的字符串的数组。
     parameters:
     - id: name
-      description: 定义筛选器匹配的 ItemHasRegularExpressionMatch 规则元素的名称。
+      description: 定义要匹配的筛选器的 ItemHasRegularExpressionMatch 规则元素的名称。
       type:
       - string
 - uid: Outlook_1_7.Office.ItemRead.getSelectedEntities
   summary: >-
-    获取在用户已选择的突出显示匹配项中找到的实体。突出显示匹配项适用于上下文加载项。
+    获取在用户已选择的突出显示匹配项中找到的实体。 突出显示的匹配项适用于上下文外接程序。
 
 
     **注意**: outlook for iOS 或 outlook for Android 中不支持此方法。
@@ -350,13 +278,13 @@ items:
       description: ''
 - uid: Outlook_1_7.Office.ItemRead.getSelectedRegExMatches
   summary: >-
-    返回突出显示匹配项中匹配在清单 XML 文件中定义的正则表达式的字符串值。突出显示匹配项适用于上下文外接程序。
+    返回突出显示匹配项中匹配在清单 XML 文件中定义的正则表达式的字符串值。 突出显示的匹配项适用于上下文外接程序。
 
 
     office.context.mailbox.item.getselectedregexmatches 方法返回匹配在清单 XML 文件中的每个 ItemHasRegularExpressionMatch 或 ItemHasKnownEntity 规则元素中定义的正则表达式的字符串。 对于 ItemHasRegularExpressionMatch 规则, 匹配的字符串必须出现在由该规则指定的项的属性中。 PropertyName 简单类型定义受支持的属性。
 
 
-    如果在项目的正文属性上指定 ItemHasRegularExpressionMatch 规则，则正则表达式应进一步筛选正文并应尝试返回该项目的整个正文。使用正则表达式（如 .*）获取项目的整个正文并不总是返回预期的结果。而是使用 Body.getAsync 方法检索整个正文。
+    如果您在项目的 body 属性上指定 ItemHasRegularExpressionMatch 规则, 则正则表达式应进一步筛选正文, 并且不应尝试返回项目的整个正文。 使用正则表达式 (如. *) 获取项目的整个正文并不总是返回预期的结果。 而是使用 getAsync 方法检索整个正文。
 
 
     **注意**: outlook for iOS 或 outlook for Android 中不支持此方法。
@@ -374,10 +302,10 @@ items:
     return:
       type:
       - any
-      description: 一个包含匹配在清单 XML 文件中定义的正则表达式的字符串数组的对象。每个数组的名称等于匹配 ItemHasRegularExpressionMatch 规则的 RegExName 属性或匹配 ItemHasKnownEntity 规则的 FilterName 属性的相应值。
+      description: 一个包含匹配在清单 XML 文件中定义的正则表达式的字符串数组的对象。 每个数组的名称等于匹配的 ItemHasRegularExpressionMatch 规则的 RegExName 属性的相应值或匹配 ItemHasKnownEntity 规则的 FilterName 属性的值。
 - uid: Outlook_1_7.Office.ItemRead.attachments
   summary: >-
-    获取项目的附件作为数组。
+    以数组的形式获取项目的附件。
 
 
     \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -401,7 +329,7 @@ items:
     获取选定项目的 Exchange Web 服务项目类。
 
 
-    您可以创建用于扩展默认邮件类别的自定义邮件类别，例如，自定义约会邮件类别 IPM.Appointment.Contoso。
+    您可以创建扩展默认邮件类别的自定义邮件类别, 例如, 自定义约会邮件类 IPM。Contoso。
 
 
     \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -409,10 +337,10 @@ items:
     <table> <tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr> <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>阅读</td></tr> </table>
 
 
-    itemClass 属性指定所选项目的邮件类别。以下是邮件或约会项目的默认邮件类别。
+    itemClass 属性指定选定项目的邮件类。 以下是邮件或约会项目的默认邮件类别。
 
 
-    <table> <tr> <th>类型</th> <th>说明</th> <th>Item 类</th> </tr> <tr> <td>约会项目</td> <td>这些是项目类 IPM 的日历项目。约会或 IPM。约会。</td> <td>ipm.note.约会、IPM。约会事件</td> </tr> <tr> <td>邮件项目</td> <td>这些项目包括具有默认邮件类别 IPM.Note 的电子邮件，以及使用 IPM.Schedule.Meeting 作为基础邮件类别的会议请求、响应和取消。</td> <td>ipm.note.请注意, IPM。Schedule (会议) 请求, IPM。Schedule. Neg、IPM。Schedule、IPM、IPM。日程安排: 会议, IPM。日程安排. 会议. 已取消</td> </tr> </table>
+    <table> <tr> <th>类型</th> <th>说明</th> <th>Item 类</th> </tr> <tr> <td>约会项目</td> <td>这些是项目类 IPM 的日历项目。约会或 IPM。约会。</td> <td>ipm.note.约会、IPM。约会事件</td> </tr> <tr> <td>邮件项目</td> <td>其中包括具有默认邮件类别 IPM 的电子邮件。注意, 以及使用 IPM 的会议请求、响应和取消。Schedule: 作为基本邮件类的会议。</td> <td>ipm.note.请注意, IPM。Schedule (会议) 请求, IPM。Schedule. Neg、IPM。Schedule、IPM、IPM。日程安排: 会议, IPM。日程安排. 会议. 已取消</td> </tr> </table>
   name: itemClass
   fullName: itemClass
   langs:
@@ -451,7 +379,7 @@ items:
     获取项目的主题, 删除所有前缀 (包括 RE: 和 FWD:)。
 
 
-    normalizedSubject 属性获取包含由电子邮件程序添加的任何标准前缀（如 RE: 和 FW:）的项目主题。若要获取包含完整前缀的项目主题，请使用 subject 属性。
+    normalizedSubject 属性获取项目的主题, 其中包含任何标准前缀 (如 RE: 和 FW:)由电子邮件程序添加的。 若要获取具有完整前缀的项的主题, 请使用 subject 属性。
 
 
     \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
@@ -471,10 +399,10 @@ items:
     获取项目的 "主题" 字段中显示的说明。
 
 
-    subject 属性获取或设置由电子邮件服务器发送项目时的整个主题。
+    subject 属性获取或设置由电子邮件服务器发送的项目的整个主题。
 
 
-    subject 属性返回一个字符串。使用 normalizedSubject 属性获取不带任何前导前缀（如 RE: 和 FW:）的主题。
+    subject 属性返回一个字符串。 使用 normalizedSubject 属性可获取主题减去任何前导前缀, 如 RE: 和 FW:。
 
 
     \[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
