--- a/docs/docs-ref-autogen/outlook_1_7/office.organizer.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/office.organizer.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 6483eeff6eb9325835873139d873221c5a1987f0
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 785238fed640865fd4042f6814f40d4be4dcc3eb
+ms.sourcegitcommit: 6c48441b8be51d3a9d7dc836e386230a155feceb
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30098535"
+ms.lasthandoff: 02/22/2019
+ms.locfileid: "30198205"
 items:
 - uid: Outlook_1_7.Office.Organizer
   summary: >-
@@ -22,7 +22,6 @@ items:
   children:
   - Outlook_1_7.Office.Organizer.getAsync
   - Outlook_1_7.Office.Organizer.getAsync_1
-  - Outlook_1_7.Office.Organizer.getAsync_2
 - uid: Outlook_1_7.Office.Organizer.getAsync
   summary: >-
     将约会的组织者值获取为 asyncResult 属性中的[EmailAddressDetails](xref:Outlook_1_7.Office.EmailAddressDetails) 。
@@ -36,7 +35,7 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'getAsync(options?: Office.AsyncContextOptions, callback?: (result: Office.AsyncResult<EmailAddressDetails>) => void): void;'
+    content: 'getAsync(options: Office.AsyncContextOptions, callback: (asyncResult: Office.AsyncResult<EmailAddressDetails>) => void): void;'
     return:
       type:
       - void
@@ -47,9 +46,9 @@ items:
       type:
       - Office.AsyncContextOptions
     - id: callback
-      description: 方法完成后, 使用单个参数 asyncresult 调用在 callback 参数中传递的函数, 该参数为 asyncresult 对象。 结果`value`的属性是邮件的组织者值, 作为 EmailAddressDetails 对象。
+      description: 方法完成后, 使用单个参数 asyncresult 调用在 callback 参数中传递的函数, 该参数为 asyncresult 对象。 结果`value`的属性是约会的组织者值, 作为 EmailAddressDetails 对象。
       type:
-      - '(result: Office.AsyncResult<EmailAddressDetails>) => void'
+      - '(asyncResult: Office.AsyncResult<EmailAddressDetails>) => void'
 - uid: Outlook_1_7.Office.Organizer.getAsync_1
   summary: >-
     将约会的组织者值获取为 asyncResult 属性中的[EmailAddressDetails](xref:Outlook_1_7.Office.EmailAddressDetails) 。
@@ -77,31 +76,13 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'getAsync(callback?: (result: Office.AsyncResult<EmailAddressDetails>) => void): void;'
+    content: 'getAsync(callback?: (asyncResult: Office.AsyncResult<EmailAddressDetails>) => void): void;'
     return:
       type:
       - void
       description: ''
     parameters:
     - id: callback
-      description: 方法完成后, 使用单个参数 asyncresult 调用在 callback 参数中传递的函数, 该参数为 asyncresult 对象。 结果`value`的属性是邮件的组织者值, 作为 EmailAddressDetails 对象。
+      description: 方法完成后, 使用单个参数 asyncresult 调用在 callback 参数中传递的函数, 该参数为 asyncresult 对象。 结果`value`的属性是约会的组织者值, 作为 EmailAddressDetails 对象。
       type:
-      - '(result: Office.AsyncResult<EmailAddressDetails>) => void'
-- uid: Outlook_1_7.Office.Organizer.getAsync_2
-  summary: >-
-    将约会的组织者值获取为 asyncResult 属性中的[EmailAddressDetails](xref:Outlook_1_7.Office.EmailAddressDetails) 。
-
-
-    \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-  remarks: <table> <tr><td>[最低权限级别](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td>ReadItem</td></tr> <tr><td>[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td>撰写</td></tr> </table>
-  name: getAsync()
-  fullName: getAsync()
-  langs:
-  - typeScript
-  type: method
-  syntax:
-    content: 'getAsync(): void;'
-    return:
-      type:
-      - void
-      description: ''
+      - '(asyncResult: Office.AsyncResult<EmailAddressDetails>) => void'
