commit bilingual contents

--- a/docs/docs-ref-autogen/outlook_1_7/office.organizer.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/office.organizer.yml
@@ -1,18 +1,18 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 6483eeff6eb9325835873139d873221c5a1987f0
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 785238fed640865fd4042f6814f40d4be4dcc3eb
+ms.sourcegitcommit: 6c48441b8be51d3a9d7dc836e386230a155feceb
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30098535"
+ms.lasthandoff: 02/22/2019
+ms.locfileid: "30198205"
 items:
 - uid: Outlook_1_7.Office.Organizer
   summary: >-
-    <span data-ttu-id="19c86-101">表示约会组织者, 即使用于创建约会的别名或委托也是如此。</span><span class="sxs-lookup"><span data-stu-id="19c86-101">Represents the appointment organizer, even if an alias or a delegate was used to create the appointment.</span></span> <span data-ttu-id="19c86-102">此对象提供用于在 Outlook 外接程序中获取约会的组织者值的方法。</span><span class="sxs-lookup"><span data-stu-id="19c86-102">This object provides a method to get the organizer value of an appointment in an Outlook add-in.</span></span>
+    <span data-ttu-id="e5a94-101">表示约会组织者, 即使用于创建约会的别名或委托也是如此。</span><span class="sxs-lookup"><span data-stu-id="e5a94-101">Represents the appointment organizer, even if an alias or a delegate was used to create the appointment.</span></span> <span data-ttu-id="e5a94-102">此对象提供用于在 Outlook 外接程序中获取约会的组织者值的方法。</span><span class="sxs-lookup"><span data-stu-id="e5a94-102">This object provides a method to get the organizer value of an appointment in an Outlook add-in.</span></span>
 
 
-    <span data-ttu-id="19c86-103">\[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="19c86-103">\[ [API set: Mailbox 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
-  remarks: <table> <tr><td>[<span data-ttu-id="19c86-104">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="19c86-104">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="19c86-105">ReadItem</span><span class="sxs-lookup"><span data-stu-id="19c86-105">ReadItem</span></span></td></tr> <tr><td>[<span data-ttu-id="19c86-106">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="19c86-106">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="19c86-107">撰写</span><span class="sxs-lookup"><span data-stu-id="19c86-107">Compose</span></span></td></tr> </table>
+    <span data-ttu-id="e5a94-103">\[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e5a94-103">\[ [API set: Mailbox 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+  remarks: <table> <tr><td>[<span data-ttu-id="e5a94-104">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="e5a94-104">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="e5a94-105">ReadItem</span><span class="sxs-lookup"><span data-stu-id="e5a94-105">ReadItem</span></span></td></tr> <tr><td>[<span data-ttu-id="e5a94-106">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="e5a94-106">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="e5a94-107">撰写</span><span class="sxs-lookup"><span data-stu-id="e5a94-107">Compose</span></span></td></tr> </table>
   name: Office.Organizer
   fullName: Office.Organizer
   langs:
@@ -22,44 +22,43 @@ items:
   children:
   - Outlook_1_7.Office.Organizer.getAsync
   - Outlook_1_7.Office.Organizer.getAsync_1
-  - Outlook_1_7.Office.Organizer.getAsync_2
 - uid: Outlook_1_7.Office.Organizer.getAsync
   summary: >-
-    <span data-ttu-id="19c86-108">将约会的组织者值获取为 asyncResult 属性中的[EmailAddressDetails](xref:Outlook_1_7.Office.EmailAddressDetails) 。</span><span class="sxs-lookup"><span data-stu-id="19c86-108">Gets the organizer value of an appointment as an [Office.EmailAddressDetails](xref:Outlook_1_7.Office.EmailAddressDetails) in the asyncResult.value property.</span></span>
+    <span data-ttu-id="e5a94-108">将约会的组织者值获取为 asyncResult 属性中的[EmailAddressDetails](xref:Outlook_1_7.Office.EmailAddressDetails) 。</span><span class="sxs-lookup"><span data-stu-id="e5a94-108">Gets the organizer value of an appointment as an [Office.EmailAddressDetails](xref:Outlook_1_7.Office.EmailAddressDetails) in the asyncResult.value property.</span></span>
 
 
-    <span data-ttu-id="19c86-109">\[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="19c86-109">\[ [API set: Mailbox 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
-  remarks: <table> <tr><td>[<span data-ttu-id="19c86-110">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="19c86-110">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="19c86-111">ReadItem</span><span class="sxs-lookup"><span data-stu-id="19c86-111">ReadItem</span></span></td></tr> <tr><td>[<span data-ttu-id="19c86-112">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="19c86-112">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="19c86-113">撰写</span><span class="sxs-lookup"><span data-stu-id="19c86-113">Compose</span></span></td></tr> </table>
+    <span data-ttu-id="e5a94-109">\[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e5a94-109">\[ [API set: Mailbox 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+  remarks: <table> <tr><td>[<span data-ttu-id="e5a94-110">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="e5a94-110">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="e5a94-111">ReadItem</span><span class="sxs-lookup"><span data-stu-id="e5a94-111">ReadItem</span></span></td></tr> <tr><td>[<span data-ttu-id="e5a94-112">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="e5a94-112">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="e5a94-113">撰写</span><span class="sxs-lookup"><span data-stu-id="e5a94-113">Compose</span></span></td></tr> </table>
   name: getAsync(options, callback)
   fullName: getAsync(options, callback)
   langs:
   - typeScript
   type: method
   syntax:
-    content: 'getAsync(options?: Office.AsyncContextOptions, callback?: (result: Office.AsyncResult<EmailAddressDetails>) => void): void;'
+    content: 'getAsync(options: Office.AsyncContextOptions, callback: (asyncResult: Office.AsyncResult<EmailAddressDetails>) => void): void;'
     return:
       type:
       - void
       description: ''
     parameters:
     - id: options
-      description: '<span data-ttu-id="19c86-114">包含一个或多个以下属性的对象文本。</span><span class="sxs-lookup"><span data-stu-id="19c86-114">An object literal that contains one or more of the following properties.</span></span> <span data-ttu-id="19c86-115">asyncContext: 开发人员可以在回调方法中提供要访问的任何对象。</span><span class="sxs-lookup"><span data-stu-id="19c86-115">asyncContext: Developers can provide any object they wish to access in the callback method.</span></span>'
+      description: '<span data-ttu-id="e5a94-114">包含一个或多个以下属性的对象文本。</span><span class="sxs-lookup"><span data-stu-id="e5a94-114">An object literal that contains one or more of the following properties.</span></span> <span data-ttu-id="e5a94-115">asyncContext: 开发人员可以在回调方法中提供要访问的任何对象。</span><span class="sxs-lookup"><span data-stu-id="e5a94-115">asyncContext: Developers can provide any object they wish to access in the callback method.</span></span>'
       type:
       - Office.AsyncContextOptions
     - id: callback
-      description: <span data-ttu-id="19c86-116">方法完成后, 使用单个参数 asyncresult 调用在 callback 参数中传递的函数, 该参数为 asyncresult 对象。</span><span class="sxs-lookup"><span data-stu-id="19c86-116">When the method completes, the function passed in the callback parameter is called with a single parameter, asyncResult, which is an asyncResult object.</span></span> <span data-ttu-id="19c86-117">结果`value`的属性是邮件的组织者值, 作为 EmailAddressDetails 对象。</span><span class="sxs-lookup"><span data-stu-id="19c86-117">The `value` property of the result is message's organizer value, as an EmailAddressDetails object.</span></span>
+      description: <span data-ttu-id="e5a94-116">方法完成后, 使用单个参数 asyncresult 调用在 callback 参数中传递的函数, 该参数为 asyncresult 对象。</span><span class="sxs-lookup"><span data-stu-id="e5a94-116">When the method completes, the function passed in the callback parameter is called with a single parameter, asyncResult, which is an AsyncResult object.</span></span> <span data-ttu-id="e5a94-117">结果`value`的属性是约会的组织者值, 作为 EmailAddressDetails 对象。</span><span class="sxs-lookup"><span data-stu-id="e5a94-117">The `value` property of the result is the appointment's organizer value, as an EmailAddressDetails object.</span></span>
       type:
-      - '(result: Office.AsyncResult<EmailAddressDetails>) => void'
+      - '(asyncResult: Office.AsyncResult<EmailAddressDetails>) => void'
 - uid: Outlook_1_7.Office.Organizer.getAsync_1
   summary: >-
-    <span data-ttu-id="19c86-118">将约会的组织者值获取为 asyncResult 属性中的[EmailAddressDetails](xref:Outlook_1_7.Office.EmailAddressDetails) 。</span><span class="sxs-lookup"><span data-stu-id="19c86-118">Gets the organizer value of an appointment as an [Office.EmailAddressDetails](xref:Outlook_1_7.Office.EmailAddressDetails) in the asyncResult.value property.</span></span>
+    <span data-ttu-id="e5a94-118">将约会的组织者值获取为 asyncResult 属性中的[EmailAddressDetails](xref:Outlook_1_7.Office.EmailAddressDetails) 。</span><span class="sxs-lookup"><span data-stu-id="e5a94-118">Gets the organizer value of an appointment as an [Office.EmailAddressDetails](xref:Outlook_1_7.Office.EmailAddressDetails) in the asyncResult.value property.</span></span>
 
 
-    <span data-ttu-id="19c86-119">\[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="19c86-119">\[ [API set: Mailbox 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="e5a94-119">\[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e5a94-119">\[ [API set: Mailbox 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
   remarks: >-
-    <table> <tr><td>[<span data-ttu-id="19c86-120">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="19c86-120">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="19c86-121">ReadItem</span><span class="sxs-lookup"><span data-stu-id="19c86-121">ReadItem</span></span></td></tr> <tr><td>[<span data-ttu-id="19c86-122">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="19c86-122">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="19c86-123">撰写</span><span class="sxs-lookup"><span data-stu-id="19c86-123">Compose</span></span></td></tr> </table><span data-ttu-id="19c86-124">
+    <table> <tr><td>[<span data-ttu-id="e5a94-120">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="e5a94-120">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="e5a94-121">ReadItem</span><span class="sxs-lookup"><span data-stu-id="e5a94-121">ReadItem</span></span></td></tr> <tr><td>[<span data-ttu-id="e5a94-122">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="e5a94-122">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="e5a94-123">撰写</span><span class="sxs-lookup"><span data-stu-id="e5a94-123">Compose</span></span></td></tr> </table><span data-ttu-id="e5a94-124">
 
-    ####说明</span><span class="sxs-lookup"><span data-stu-id="19c86-124">
+    ####说明</span><span class="sxs-lookup"><span data-stu-id="e5a94-124">
 
     #### Examples</span></span>
 
@@ -79,31 +78,13 @@ items:
   - typeScript
   type: method
   syntax:
-    content: 'getAsync(callback?: (result: Office.AsyncResult<EmailAddressDetails>) => void): void;'
+    content: 'getAsync(callback?: (asyncResult: Office.AsyncResult<EmailAddressDetails>) => void): void;'
     return:
       type:
       - void
       description: ''
     parameters:
     - id: callback
-      description: <span data-ttu-id="19c86-125">方法完成后, 使用单个参数 asyncresult 调用在 callback 参数中传递的函数, 该参数为 asyncresult 对象。</span><span class="sxs-lookup"><span data-stu-id="19c86-125">When the method completes, the function passed in the callback parameter is called with a single parameter, asyncResult, which is an asyncResult object.</span></span> <span data-ttu-id="19c86-126">结果`value`的属性是邮件的组织者值, 作为 EmailAddressDetails 对象。</span><span class="sxs-lookup"><span data-stu-id="19c86-126">The `value` property of the result is message's organizer value, as an EmailAddressDetails object.</span></span>
+      description: <span data-ttu-id="e5a94-125">方法完成后, 使用单个参数 asyncresult 调用在 callback 参数中传递的函数, 该参数为 asyncresult 对象。</span><span class="sxs-lookup"><span data-stu-id="e5a94-125">When the method completes, the function passed in the callback parameter is called with a single parameter, asyncResult, which is an AsyncResult object.</span></span> <span data-ttu-id="e5a94-126">结果`value`的属性是约会的组织者值, 作为 EmailAddressDetails 对象。</span><span class="sxs-lookup"><span data-stu-id="e5a94-126">The `value` property of the result is the appointment's organizer value, as an EmailAddressDetails object.</span></span>
       type:
-      - '(result: Office.AsyncResult<EmailAddressDetails>) => void'
-- uid: Outlook_1_7.Office.Organizer.getAsync_2
-  summary: >-
-    <span data-ttu-id="19c86-127">将约会的组织者值获取为 asyncResult 属性中的[EmailAddressDetails](xref:Outlook_1_7.Office.EmailAddressDetails) 。</span><span class="sxs-lookup"><span data-stu-id="19c86-127">Gets the organizer value of an appointment as an [Office.EmailAddressDetails](xref:Outlook_1_7.Office.EmailAddressDetails) in the asyncResult.value property.</span></span>
-
-
-    <span data-ttu-id="19c86-128">\[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="19c86-128">\[ [API set: Mailbox 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
-  remarks: <table> <tr><td>[<span data-ttu-id="19c86-129">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="19c86-129">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="19c86-130">ReadItem</span><span class="sxs-lookup"><span data-stu-id="19c86-130">ReadItem</span></span></td></tr> <tr><td>[<span data-ttu-id="19c86-131">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="19c86-131">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="19c86-132">撰写</span><span class="sxs-lookup"><span data-stu-id="19c86-132">Compose</span></span></td></tr> </table>
-  name: getAsync()
-  fullName: getAsync()
-  langs:
-  - typeScript
-  type: method
-  syntax:
-    content: 'getAsync(): void;'
-    return:
-      type:
-      - void
-      description: ''
+      - '(asyncResult: Office.AsyncResult<EmailAddressDetails>) => void'
